--- a/chat-impl/impl/src/bundle/chat_fr_CA.properties
+++ b/chat-impl/impl/src/bundle/chat_fr_CA.properties
@@ -1,8 +1,5 @@
-
-chat_body = Corps du message\r\n
-
-chat_from = De
-
-chat_header = Ent\u00EAte du message\r\n
-
-chat_message = Message  
+#Thu Nov 18 07:44:08 CET 2010
+chat_from=De
+chat_body=Corps du message\r\n
+chat_message=Message  
+chat_header=Ent\u00EAte du message\r\n
