--- a/chat-impl/impl/src/bundle/chat_fr_FR.properties
+++ b/chat-impl/impl/src/bundle/chat_fr_FR.properties
@@ -1,5 +1,5 @@
-#Stored by I18NEdit, may be edited!
-chat_body=Corps du message\n
+#Thu Nov 18 07:45:51 CET 2010
 chat_from=De
-chat_header=Ent\u00EAte du message\n
+chat_body=Corps du message\n
 chat_message=Message
+chat_header=Ent\u00EAte du message\n
