--- a/chat-impl/impl/src/bundle/chat_pt_BR.properties
+++ b/chat-impl/impl/src/bundle/chat_pt_BR.properties
@@ -1,9 +1,5 @@
-#-------------------------------------------------------------------------------
-# Translated by: e-Labora: e-Learning Laboratory - State University of Campinas
-# TIDIA-Ae Project Fapesp, Sao Paulo, Brazil
-#-------------------------------------------------------------------------------
-
-chat_header=Cabe\u00e7alho da Mensagem\n
+#Thu Nov 18 07:49:27 CET 2010
 chat_from=do 
 chat_body=Corpo da Mensagem\n
 chat_message=Mensagem  
+chat_header=Cabe\u00E7alho da Mensagem\n
