--- a/chat-tool/tool/src/bundle/chat_ca.properties
+++ b/chat-tool/tool/src/bundle/chat_ca.properties
@@ -1,148 +1,125 @@
-#
-# Copyright (c) 2009 Sakai Foundation
-#
-# Licensed under the Educational Community License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-# http://www.osedu.org/licenses/ECL-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-# 
-thischat = Aquest xat no està disponible.
-chatmesdel = Missatge de xat esborrat per
-chatroom = Sala de xat:
-days = Dies
-forchat = per al nom de la sala de xat. Nom de la sala de xat
-hided = Amagar la data
-hidet = Amagar l'hora
-messages = Missatges
-on = el
-permis = Autoritzacions
-setpermis = Ajustar les autoritzacions per a la sala de xat al lloc de treball
-showall = Tots els missatges
-showd = Mostra la data
-showlast = Mostrar els últims
-showpast = Passat
-showt = Mostra l'hora
-showtoday = Mostrar els missatges d'avui
-thereispro = En aquest moment hi ha un problema per ajustar les autoritzacions.
-therewaspro = Hi ha hagut un problema per enviar el missatge anterior.
-turnoff = Obrir l'avís de nou missatge
-turnon = Tancar l'avís de nou missatge
-youdonot1 = No teniu autorització per visualitzar aquest xat.
-youdonot2 = No teniu autorització per crear aquest xat.
-youdonot3 = No teniu autorització per enviar aquest xat.
-youdonot4 = No teniu autorització per esborrar aquest missatge de xat.
-youent = Heu entrat
-gen.alert = Avís:
-gen.cancel = Cancel·la
-gen.date = Data:
-gen.delete = Esborra
-gen.from = Des de/d':
-gen.mess = Missatge:
-gen.save = Actualitza les opcions
-control.clear = Buida
-control.post = Afegeix missatge
-custom.chatroom = Sala de xat
-custom.cuschat = Opcions de xat
-custom.days = dies enrere
-custom.howmany = Quants missatges es mostraran?
-custom.mess = missatge(s)
-custom.showall = Mostra tots els missatges
-custom.showlast = Mostra el(s) darrer(s)
-custom.showpast = Mostra missatges fins a
-custom.use1 = Utilitzar la sala de xat principal d'aquest lloc de treball
-custom.use2 = Utilitzar la sala de xat anomenada
-custom.use3 = Utilitzar una nova sala de xat
-custom.which = Quina sala de xat es visualitzarà?
-custom.called = anomenada
-custom.msgdisp = Pantalla de missatge
-delete.delete = Esborrant missatge de xat
-delete.sure = Segur que voleu esborrar aquest missatge permanentment?
-lay.note = Tots els missatges de xat queden arxivats i els pot llegir qualsevol participant del lloc.
-lay.user = Usuaris al xat
-list.del = Esborrar aquest missatge
-bar.onlytime = Només l'hora
-bar.datetime = Data i hora
-bar.onlydate = Només la data
-bar.nodatetime = Ni data ni hora
-bar.allmes = Tots els missatges
-bar.view = Visualitzar
-bar.show = Mostrar
-bar.listnavselect = Llista d'opcions: premeu alt + fletxes amunt i avall per desplaçar-vos pel menú
-
-allMessages=Tots els missatges
-cancel=Cancel·lar
-control_post=Afegir missatge
-dateOnly=Només la data
-default_new_channel_title=Canal principal
-lay_note=Tots els missatges de xat queden arxivats i els pot llegir qualsevol participant del lloc. 
-lay_user=Usuaris al xat
-manage_tool=Eina d'administració
-neitherDateOrTime=Ni data ni hora
-permissions_link=Permisos
-timeAndDate=Data i hora
-timeOnly=Només l'hora
-view=Visualitzar
-
-
+#Thu Nov 18 07:36:53 CET 2010
+hidet=Amagar l'hora
+custom.called=anomenada
+custom.which=Quina sala de xat es visualitzar\u00E0?
 add_room=Afegeix Sala
-change_room=Canvia de Sala
-channel_creation_date=Data de Creació
-channel_description=Descripció
-channel_title=Títol
-control_panel=Control
-delete_room_confirm_alert=Esteu segurs de voler suprimir definitivament aquesta sala de xat?
-delete_room_confirm_title=Suprimint sala de xat
-edit_channel_title=Edició de la Sala
-enter_the_chat_room=Introduir ''{0}'' Sala
-gen.edit=Edita
-message_display=Visor de missatges
-message_owner=Propietari
-monitor_panel=Llista
-number_chars=Número de caràcters per missatge de xat
-number_days=Número de dies transcorreguts
-number_messages=Número de missatges de xat
-past_x_days= {0} dies enrere
-perm_description=Establir permisos per a {0} en l'espai de treball ''{1}''
-perm_error=Permisos insuficients per a {0}
-presence_panel=Presència
-recent_chat_heading=Visualització de xats recents
-select_room_title=Seleccionar Sala de Xat
-set_as_default=Establir ''{0}'' per defecte
-set_default=Establir per Defecte
-title_required=El títol és obligatori
-tool_options_title=Opcions de l'Eina
-update_text=Actualitzar
-
-viewingChatRoomText=Mostrant els missatges de ''{0}''
-
-add_channel_title=Afegir Sala de Xat
-room_list_title=Administració de Sales de Xat
-synoptic_options_title=Opcions sinòptiques
-#Sakai 2009
-back_to_room=Torna a la sala
-channel_description_colon=Descripció:
-channel_enable_override_description=Permet que els usuaris canviïn les opcions de visualització per a la seva finestra de xat.
-channel_title_colon=Títol:
-combox.viewfrom=Veure missatges des de...
-control.lab=Introduir un missatge de xat
-delete.wrong=El missatge ja està esborrat!
-delete_room_messages=Esborrar historial
-delete_room_messages_confirm_alert=Esteu segurs que voleu esborrar permanentment tots els missatges d'aquesta sala de xat?
-delete_room_messages_confirm_title=Esborrant tots els missatges de la sala...
-desc_too_long=La descripció ha de tenir menys de {0} caràcters
-lay_restricted_note_days=Només s'arxiven, i poden ser llegits per qualsevol membre, els missatges dels últims {0} dies.
-lay_restricted_note_messages=Només s'arxiven, i poden ser llegits per qualsevol membre, els missatges dels últims {0} dies.
-lay_restricted_note_none=Els usuaris del lloc només poden veure els missatges de la sessió actual.
-neg_num_error=No es permet usar nombres negatius.
-past_x_messages=Últims {0} missatges
+bar.onlydate=Nom\u00E9s la data
 shownone=No mostreu l'historial de missatges
-title_too_long=El títol ha de tenir menys de {0} caràcters
-uniqueid=Només identificador
+custom.howmany=Quants missatges es mostraran?
+gen.from=Des de/d'\:
+control_panel=Control
+lay_note=Tots els missatges de xat queden arxivats i els pot llegir qualsevol participant del lloc. 
+hided=Amagar la data
+number_messages=N\u00FAmero de missatges de xat
+add_channel_title=Afegir Sala de Xat
+control.clear=Buida
+back_to_room=Torna a la sala
+tool_options_title=Opcions de l'Eina
+lay_restricted_note_none=Els usuaris del lloc nom\u00E9s poden veure els missatges de la sessi\u00F3 actual.
+delete.wrong=El missatge ja est\u00E0 esborrat\!
+monitor_panel=Llista
+title_required=El t\u00EDtol \u00E9s obligatori
+custom.showall=Mostra tots els missatges
+channel_description_colon=Descripci\u00F3\:
+recent_chat_heading=Visualitzaci\u00F3 de xats recents
+gen.alert=Av\u00EDs\:
+past_x_messages=\u00DAltims {0} missatges
+change_room=Canvia de Sala
+thereispro=En aquest moment hi ha un problema per ajustar les autoritzacions.
+thischat=Aquest xat no est\u00E0 disponible.
+custom.use3=Utilitzar una nova sala de xat
+bar.view=Visualitzar
+custom.use2=Utilitzar la sala de xat anomenada
+custom.use1=Utilitzar la sala de xat principal d'aquest lloc de treball
+number_days=N\u00FAmero de dies transcorreguts
+message_display=Visor de missatges
+delete_room_messages=Esborrar historial
+custom.cuschat=Opcions de xat
+bar.nodatetime=Ni data ni hora
+select_room_title=Seleccionar Sala de Xat
+lay.note=Tots els missatges de xat queden arxivats i els pot llegir qualsevol participant del lloc.
+neitherDateOrTime=Ni data ni hora
+room_list_title=Administraci\u00F3 de Sales de Xat
+bar.onlytime=Nom\u00E9s l'hora
+days=Dies
+delete_room_messages_confirm_title=Esborrant tots els missatges de la sala...
+delete.sure=Segur que voleu esborrar aquest missatge permanentment?
+permis=Autoritzacions
+turnoff=Obrir l'av\u00EDs de nou missatge
+youent=Heu entrat
+on=el
+delete_room_messages_confirm_alert=Esteu segurs que voleu esborrar permanentment tots els missatges d'aquesta sala de xat?
+channel_creation_date=Data de Creaci\u00F3
+uniqueid=Nom\u00E9s identificador
+combox.viewfrom=Veure missatges des de...
+gen.edit=Edita
+edit_channel_title=Edici\u00F3 de la Sala
+bar.allmes=Tots els missatges
+messages=Missatges
+synoptic_options_title=Opcions sin\u00F2ptiques
+lay_user=Usuaris al xat
+bar.datetime=Data i hora
+lay_restricted_note_days=Nom\u00E9s s'arxiven, i poden ser llegits per qualsevol membre, els missatges dels \u00FAltims {0} dies.
+desc_too_long=La descripci\u00F3 ha de tenir menys de {0} car\u00E0cters
+update_text=Actualitzar
+message_owner=Propietari
+showlast=Mostrar els \u00FAltims
+manage_tool=Eina d'administraci\u00F3
+chatmesdel=Missatge de xat esborrat per
+allMessages=Tots els missatges
+custom.msgdisp=Pantalla de missatge
+bar.show=Mostrar
+channel_description=Descripci\u00F3
+control.lab=Introduir un missatge de xat
+forchat=per al nom de la sala de xat. Nom de la sala de xat
+number_chars=N\u00FAmero de car\u00E0cters per missatge de xat
+showt=Mostra l'hora
+set_as_default=Establir ''{0}'' per defecte
+perm_description=Establir permisos per a {0} en l'espai de treball ''{1}''
+showpast=Passat
+viewingChatRoomText=Mostrant els missatges de ''{0}''
+youdonot4=No teniu autoritzaci\u00F3 per esborrar aquest missatge de xat.
+showtoday=Mostrar els missatges d'avui
+youdonot3=No teniu autoritzaci\u00F3 per enviar aquest xat.
+youdonot2=No teniu autoritzaci\u00F3 per crear aquest xat.
+youdonot1=No teniu autoritzaci\u00F3 per visualitzar aquest xat.
+timeAndDate=Data i hora
+custom.showlast=Mostra el(s) darrer(s)
+channel_enable_override_description=Permet que els usuaris canvi\u00EFn les opcions de visualitzaci\u00F3 per a la seva finestra de xat.
+setpermis=Ajustar les autoritzacions per a la sala de xat al lloc de treball
+showd=Mostra la data
+channel_title_colon=T\u00EDtol\:
+delete.delete=Esborrant missatge de xat
+lay.user=Usuaris al xat
+delete_room_confirm_title=Suprimint sala de xat
+past_x_days={0} dies enrere
+channel_title=T\u00EDtol
+bar.listnavselect=Llista d'opcions\: premeu alt + fletxes amunt i avall per despla\u00E7ar-vos pel men\u00FA
+control.post=Afegeix missatge
+lay_restricted_note_messages=Nom\u00E9s s'arxiven, i poden ser llegits per qualsevol membre, els missatges dels \u00FAltims {0} dies.
+timeOnly=Nom\u00E9s l'hora
+view=Visualitzar
+gen.delete=Esborra
+gen.date=Data\:
+custom.showpast=Mostra missatges fins a
 validation_error=Hi ha hagut un error mentre s'enviava el formulari. Vegeu el missatge informatiu de la part inferior.
+showall=Tots els missatges
+custom.days=dies enrere
+delete_room_confirm_alert=Esteu segurs de voler suprimir definitivament aquesta sala de xat?
+chatroom=Sala de xat\:
+gen.save=Actualitza les opcions
+list.del=Esborrar aquest missatge
+default_new_channel_title=Canal principal
+presence_panel=Pres\u00E8ncia
+title_too_long=El t\u00EDtol ha de tenir menys de {0} car\u00E0cters
+gen.cancel=Cancel\u00B7la
+neg_num_error=No es permet usar nombres negatius.
+custom.mess=missatge(s)
+dateOnly=Nom\u00E9s la data
+perm_error=Permisos insuficients per a {0}
+enter_the_chat_room=Introduir ''{0}'' Sala
+set_default=Establir per Defecte
+therewaspro=Hi ha hagut un problema per enviar el missatge anterior.
+gen.mess=Missatge\:
+turnon=Tancar l'av\u00EDs de nou missatge
+custom.chatroom=Sala de xat
