--- a/chat-tool/tool/src/bundle/chat_fr_FR.properties
+++ b/chat-tool/tool/src/bundle/chat_fr_FR.properties
@@ -1,140 +1,125 @@
-# Copyright (C) 2008,2009 Universit\u00E9 Pierre et Marie Curie
-#
-# Available under the license specified in the Sakai release
-#
-# Contact:
-# Jean-Fran\u00E7ois L\u00E9v\u00EAque (jean-francois.leveque@upmc.fr)
-#
-# Translators:
-# Jean-Fran\u00E7ois L\u00E9v\u00EAque (Universit\u00E9 Pierre et Marie Curie)
-# Cyril Vassiat (C@rrefours T\u00E9l\u00E9matiques)
-#
-# Validation:
-# Laurent Petit (Universit\u00E9 Pierre et Marie Curie)
-# Jacques Pignon (Universit\u00E9 de Poitiers, jacques.pignon@univ-poitiers.fr)
-
-#Stored by I18NEdit, may be edited!
-add_channel_title=Ajouter salon
-add_room=Ajouter salon
-allMessages=Tous les messages
-back_to_room=Retour au salon
-bar.allmes=Tous les messages
-bar.datetime=Date et heure
-bar.listnavselect=Liste des options \: appuyer sur alt + fl\u00E8ches haut et bas pour faire d\u00E9filer le menu
-bar.nodatetime=Ni la date ni l'heure
-bar.onlydate=Date seulement
-bar.onlytime=Heure seulement
-bar.show=Afficher
-bar.view=Vue
-change_room=Changer de salon
-channel_creation_date=Date de cr\u00E9ation
-channel_description=Description
-channel_description_colon=Description \:
-channel_enable_override_description=Permettre aux participants du chat, de changer les propri\u00E9t\u00E9s d'affichage de leur propre fen\u00EAtre de chat\n
-channel_title=Titre
-channel_title_colon=Titre \:
-chatmesdel=Message de chat supprim\u00E9 par
-chatroom=Salon de chat \:
-combox.viewfrom=Aper\u00E7u de message de...
-control.clear=R\u00E9initialiser
-control.lab=Entrer le message de chat
-control.post=Ajouter message
-control_panel=Contr\u00F4le
-custom.called=nomm\u00E9
-custom.chatroom=Salon de chat
-custom.cuschat=Options de chat
-custom.days=jours
-custom.howmany=Combien de messages seront affich\u00E9s ?
-custom.mess=messages
-custom.msgdisp=Affichage message
-custom.showall=Afficher tous les messages
-custom.showlast=Afficher les derniers
-custom.showpast=Afficher les messages pass\u00E9s
-custom.use1=Utiliser le salon de chat principal de ce site
-custom.use2=Utiliser le salon de chat appel\u00E9
-custom.use3=Utiliser un nouveau salon de chat
-custom.which=Quel salon de chat sera affich\u00E9 ?
-dateOnly=Date seulement
-days=Jours
-default_new_channel_title=Salon principal de chat
-delete.delete=Supprimer le message de chat
-delete.sure=Etes-vous s\u00FBr de vouloir supprimer de mani\u00E8re permanente ce message ?
-delete.wrong=Le message a d\u00E9j\u00E0 \u00E9t\u00E9  supprim\u00E9 \!
-delete_room_confirm_alert=Etes-vous s\u00FBr de vouloir supprimer d\u00E9finitivement ce salon de chat?
-delete_room_confirm_title=Suppression du salon
-delete_room_messages=Netoyer l'historique
-delete_room_messages_confirm_alert=Etes-vous s\u00FBr de vouloir supprimer de mani\u00E8re permanente tous les messages de ce salon de chat ?
-delete_room_messages_confirm_title=Suppression de tous les messages du salon du chat
-desc_too_long=Description doit \u00EAtre de moins que {0} de caract\u00E8res
-edit_channel_title=Editer Salon
-enter_the_chat_room=Entrer ''{0}'' Salon
-forchat=pour le nom de salon de clavardage. Nom du salon du chat
-gen.alert=Alerte \:
-gen.cancel=Annuler
-gen.date=Date \:
-gen.delete=Supprimer
-gen.edit=Editer
-gen.from=De\:
-gen.mess=Message \:
-gen.save=Mettre \u00E0 jour les options
-hided=Cacher date
+#Thu Nov 18 07:45:49 CET 2010
 hidet=Cacher heure
-lay.note=Tous les messages de clavardage sont archiv\u00E9s et peuvent \u00EAtre lus par n'importe quel participant du site.
-lay.user=Utilisateurs du chat
-lay_note=Tous les messages sont archiv\u00E9s et peuvent \u00EAtre lus par tous les membres du site.
-lay_restricted_note_days=Seulement les messages des derniers {0} jours  sont archiv\u00E9s et peuvent \u00EAtre lus par n'importe quel participant d'emplacement.
-lay_restricted_note_messages=Seulement les derniers  {0} messages  sont archiv\u00E9s et peuvent \u00EAtre lus par n'importe quel participant du site.
-lay_restricted_note_none=Seulement des messages de la session courante peuvent \u00EAtre lus par des participants du site.
-lay_user=Utilisateurs dans le salon
-list.del=Supprimer ce message
-manage_tool=Options
-message_display=Affichage du message
-message_owner=Propri\u00E9taire
-messages=Messages
-monitor_panel=Liste
-neg_num_error=Les nombres n\u00E9gatifs ne sont pas admis
-neitherDateOrTime=Ni la date ni l'heure
-number_chars=Nombre de caract\u00E8res par message
-number_days=Nombre de jours en arri\u00E8re
-number_messages=Nombre de messages
-on=le
-past_x_days={0} derniers jours
-past_x_messages=Derniers {0} messages
-perm_description=Etablir les permissions pour {0} dans le site "{1}"
-perm_error=Privil\u00E8ges insuffisants pour {0}
-permis=Droits d'acc\u00E8s
-presence_panel=Pr\u00E9sence
-recent_chat_heading=Affichage du chat r\u00E9cent
-room_list_title=Administrer les salons
-select_room_title=S\u00E9lectionnez un salon
-set_as_default=Etablir "{0}" par d\u00E9faut
-set_default=Etablir par d\u00E9faut
-setpermis=R\u00E9gler les droits d'acc\u00E8s pour le salon de chat dans le site
-showall=Tous les messages
-showd=Afficher date
-showlast=Afficher dernier
+custom.called=nomm\u00E9
+custom.which=Quel salon de chat sera affich\u00E9 ?
+bar.onlydate=Date seulement
+add_room=Ajouter salon
 shownone=Pas d'affichage d'historique
-showpast=Pass\u00E9s
-showt=Afficher heure
-showtoday=Afficher les messages d'aujourd'hui
-synoptic_options_title=Options synoptiques
-thereispro=Les droits d'acc\u00E8s ne peuvent \u00EAtre r\u00E9gl\u00E9s actuellement parce que le site est d\u00E9j\u00E0 en train d'\u00EAtre \u00E9dit\u00E9. Fermez les droits d'acc\u00E8s dans les autres outils avant de continuer.
-therewaspro=Un probl\u00E8me est survenu lors de l'envoi du message pr\u00E9c\u00E9dent.
-thischat=Ce clavardage n'est pas disponible.
-timeAndDate=Date et heure
-timeOnly=Heure seulement
-title_required=Titre requis
-title_too_long=Titre doit comporter moins que {0}  caract\u00E8res
+custom.howmany=Combien de messages seront affich\u00E9s ?
+gen.from=De\:
+lay_note=Tous les messages sont archiv\u00E9s et peuvent \u00EAtre lus par tous les membres du site.
+control_panel=Contr\u00F4le
+hided=Cacher date
+number_messages=Nombre de messages
+add_channel_title=Ajouter salon
+control.clear=R\u00E9initialiser
+back_to_room=Retour au salon
 tool_options_title=Options des outils
+lay_restricted_note_none=Seulement des messages de la session courante peuvent \u00EAtre lus par des participants du site.
+delete.wrong=Le message a d\u00E9j\u00E0 \u00E9t\u00E9  supprim\u00E9 \!
+monitor_panel=Liste
+title_required=Titre requis
+custom.showall=Afficher tous les messages
+recent_chat_heading=Affichage du chat r\u00E9cent
+gen.alert=Alerte \:
+channel_description_colon=Description \:
+thereispro=Les droits d'acc\u00E8s ne peuvent \u00EAtre r\u00E9gl\u00E9s actuellement parce que le site est d\u00E9j\u00E0 en train d'\u00EAtre \u00E9dit\u00E9. Fermez les droits d'acc\u00E8s dans les autres outils avant de continuer.
+past_x_messages=Derniers {0} messages
+change_room=Changer de salon
+thischat=Ce clavardage n'est pas disponible.
+custom.use3=Utiliser un nouveau salon de chat
+bar.view=Vue
+custom.use2=Utiliser le salon de chat appel\u00E9
+custom.use1=Utiliser le salon de chat principal de ce site
+number_days=Nombre de jours en arri\u00E8re
+message_display=Affichage du message
+delete_room_messages=Netoyer l'historique
+custom.cuschat=Options de chat
+bar.nodatetime=Ni la date ni l'heure
+select_room_title=S\u00E9lectionnez un salon
+neitherDateOrTime=Ni la date ni l'heure
+lay.note=Tous les messages de clavardage sont archiv\u00E9s et peuvent \u00EAtre lus par n'importe quel participant du site.
+room_list_title=Administrer les salons
+bar.onlytime=Heure seulement
+days=Jours
+delete_room_messages_confirm_title=Suppression de tous les messages du salon du chat
+delete.sure=Etes-vous s\u00FBr de vouloir supprimer de mani\u00E8re permanente ce message ?
+permis=Droits d'acc\u00E8s
 turnoff=D\u00E9sactiver l'alerte de nouveau message
-turnon=Activer l'alerte de nouveau message
-uniqueid=Seule ID
-update_text=Actualiser
-validation_error=Il y avait une erreur soumettant cette forme.  Voir les messages sp\u00E9cifiques ci-dessous.
-view=Voir
-viewingChatRoomText=Affichage des messages pour "{0}"
-youdonot1=Vous n'avez pas le droit de voir ce chat.
-youdonot2=Vous n'avez pas le droit de cr\u00E9er ce chat.
-youdonot3=Vous n'avez pas le droit de publier dans ce chat.
-youdonot4=Vous n'avez pas le droit de supprimer ce message du chat.
 youent=Vous \u00EAtes entr\u00E9
+on=le
+delete_room_messages_confirm_alert=Etes-vous s\u00FBr de vouloir supprimer de mani\u00E8re permanente tous les messages de ce salon de chat ?
+channel_creation_date=Date de cr\u00E9ation
+uniqueid=Seule ID
+gen.edit=Editer
+combox.viewfrom=Aper\u00E7u de message de...
+edit_channel_title=Editer Salon
+messages=Messages
+bar.allmes=Tous les messages
+synoptic_options_title=Options synoptiques
+lay_user=Utilisateurs dans le salon
+bar.datetime=Date et heure
+desc_too_long=Description doit \u00EAtre de moins que {0} de caract\u00E8res
+lay_restricted_note_days=Seulement les messages des derniers {0} jours  sont archiv\u00E9s et peuvent \u00EAtre lus par n'importe quel participant d'emplacement.
+update_text=Actualiser
+message_owner=Propri\u00E9taire
+showlast=Afficher dernier
+manage_tool=Options
+chatmesdel=Message de chat supprim\u00E9 par
+allMessages=Tous les messages
+custom.msgdisp=Affichage message
+bar.show=Afficher
+channel_description=Description
+control.lab=Entrer le message de chat
+forchat=pour le nom de salon de clavardage. Nom du salon du chat
+number_chars=Nombre de caract\u00E8res par message
+showt=Afficher heure
+set_as_default=Etablir "{0}" par d\u00E9faut
+perm_description=Etablir les permissions pour {0} dans le site "{1}"
+showpast=Pass\u00E9s
+viewingChatRoomText=Affichage des messages pour "{0}"
+youdonot4=Vous n'avez pas le droit de supprimer ce message du chat.
+showtoday=Afficher les messages d'aujourd'hui
+youdonot3=Vous n'avez pas le droit de publier dans ce chat.
+youdonot2=Vous n'avez pas le droit de cr\u00E9er ce chat.
+youdonot1=Vous n'avez pas le droit de voir ce chat.
+timeAndDate=Date et heure
+custom.showlast=Afficher les derniers
+setpermis=R\u00E9gler les droits d'acc\u00E8s pour le salon de chat dans le site
+channel_enable_override_description=Permettre aux participants du chat, de changer les propri\u00E9t\u00E9s d'affichage de leur propre fen\u00EAtre de chat\n
+showd=Afficher date
+channel_title_colon=Titre \:
+delete.delete=Supprimer le message de chat
+lay.user=Utilisateurs du chat
+delete_room_confirm_title=Suppression du salon
+past_x_days={0} derniers jours
+bar.listnavselect=Liste des options \: appuyer sur alt + fl\u00E8ches haut et bas pour faire d\u00E9filer le menu
+control.post=Ajouter message
+channel_title=Titre
+timeOnly=Heure seulement
+lay_restricted_note_messages=Seulement les derniers  {0} messages  sont archiv\u00E9s et peuvent \u00EAtre lus par n'importe quel participant du site.
+view=Voir
+gen.delete=Supprimer
+gen.date=Date \:
+custom.showpast=Afficher les messages pass\u00E9s
+validation_error=Il y avait une erreur soumettant cette forme.  Voir les messages sp\u00E9cifiques ci-dessous.
+showall=Tous les messages
+custom.days=jours
+delete_room_confirm_alert=Etes-vous s\u00FBr de vouloir supprimer d\u00E9finitivement ce salon de chat?
+chatroom=Salon de chat \:
+list.del=Supprimer ce message
+gen.save=Mettre \u00E0 jour les options
+default_new_channel_title=Salon principal de chat
+presence_panel=Pr\u00E9sence
+title_too_long=Titre doit comporter moins que {0}  caract\u00E8res
+gen.cancel=Annuler
+neg_num_error=Les nombres n\u00E9gatifs ne sont pas admis
+custom.mess=messages
+dateOnly=Date seulement
+perm_error=Privil\u00E8ges insuffisants pour {0}
+enter_the_chat_room=Entrer ''{0}'' Salon
+set_default=Etablir par d\u00E9faut
+therewaspro=Un probl\u00E8me est survenu lors de l'envoi du message pr\u00E9c\u00E9dent.
+turnon=Activer l'alerte de nouveau message
+gen.mess=Message \:
+custom.chatroom=Salon de chat
