--- a/chat-tool/tool/src/bundle/permissions_ca.properties
+++ b/chat-tool/tool/src/bundle/permissions_ca.properties
@@ -1,7 +1,8 @@
+#Thu Nov 18 07:36:03 CET 2010
+desc-chat.new.channel=Crea una sala de xat nova
 desc-chat.new=Envia missatges de xat
-desc-chat.read=Llegeix missatges de xat
-desc-chat.delete.any=Esborra qualsevol missatge
 desc-chat.delete.own=Esborra missatges propis
 desc-chat.delete.channel=Esborra una sala de xat
-desc-chat.new.channel=Crea una sala de xat nova
+desc-chat.read=Llegeix missatges de xat
 desc-chat.revise.channel=Configura les opcions de la sala de xat
+desc-chat.delete.any=Esborra qualsevol missatge
