--- a/chat-tool/tool/src/bundle/permissions_es.properties
+++ b/chat-tool/tool/src/bundle/permissions_es.properties
@@ -1,8 +1,8 @@
+#Thu Nov 18 07:38:57 CET 2010
+desc-chat.new.channel=Crear una nueva sala en el chat
 desc-chat.new=Publicar mensajes del chat
-desc-chat.read=Leer mensajes del chat
-desc-chat.delete.any=Borrar cualquier mensaje del chat
 desc-chat.delete.own=Borrar mensajes propios del char
 desc-chat.delete.channel=Borrar un sala del chat
-desc-chat.new.channel=Crear una nueva sala en el chat
+desc-chat.read=Leer mensajes del chat
 desc-chat.revise.channel=Modificar opciones de las salas del chat
-
+desc-chat.delete.any=Borrar cualquier mensaje del chat
