--- a/chat-impl/impl/src/bundle/chat_es.properties
+++ b/chat-impl/impl/src/bundle/chat_es.properties
@@ -1,4 +1,5 @@
-chat_header=Cabeceras del mensaje
+#Thu Nov 18 07:39:17 CET 2010
 chat_from=De 
 chat_body=Cuerpo del mensaje
 chat_message=Mensaje
+chat_header=Cabeceras del mensaje
