--- a/chat-tool/tool/src/bundle/chat_es.properties
+++ b/chat-tool/tool/src/bundle/chat_es.properties
@@ -1,173 +1,125 @@
-thischat = El chat no est\u00E1 disponible.
-chatmesdel = Mensaje del chat borrado por
-chatroom = Sala de Chat:
-days = D\u00EDas
-forchat = por nombre de Sala de Chat. Nombre de Sala de Chat
-hided = Ocultar fecha
-hidet = Ocultar hora
-messages = Mensajes
-on = on
-permis = Permisos
-setpermis = Establecer permisos en la Sala de Chat del sitio 
-perm_description= Establecer permisos para {0} en el sitio de trabajo ''{1}''
-showall = Todos los mensajes
-showd = Mostrar fecha
-showlast = Mostrar los \u00FAltimos
-showpast = Pasado
-showt = Mostrar hora
-showtoday = Mostrar los mensajes de hoy
-thereispro = No se pueden establecer los permisos porque el sitio est\u00E1 siendo editado por otro usuario. Cierre los permisos en las otras herramientas antes de continuar.
-therewaspro = Hubo un problema en el env\u00EDo del mensaje anterior.
-turnoff = DESACTIVE la alerta de nuevo mensaje
-turnon = ACTIVE la alerta de nuevo mensaje
-youdonot1 = No tiene permiso para ver este chat.
-youdonot2 = No tiene permiso para crear este chat.
-youdonot3 = No tiene permiso para ver enviar mensajes a este chat.
-youdonot4 = No tiene permiso para borrar mensajes de este chat.
-youent = Ha introducido
-
-
-#General Vm
-
-gen.alert = Alerta:
-gen.cancel = Cancelar
-gen.date = Fecha:
-gen.delete = Borrar
-gen.edit = Editar
-gen.from = De:
-gen.mess = Mensaje:
-gen.save = Actualizar opciones
-
-
-#Control Vm
-
-control.clear = Limpiar
-control.post = A\u00F1adir mensaje
-
-
-#Customize Vm
-
-custom.chatroom = Sala de Chat
-custom.cuschat = Opciones del chat
-custom.days = d\u00EDas
-custom.howmany = \u00BFCu\u00E1ntos mensajes se mostrar\u00E1n?
-custom.mess = mensajes
-custom.showall = Mostrar todos los mensajes
-custom.showlast = Mostrar los \u00FAltimos
-custom.showpast = Mostrar los mensajes de los \u00FAltimos
-custom.use1 = Utilizar la Sala de Chat principal del sitio
-custom.use2 = Utilizar la Sala de Chat llamada
-custom.use3 = Utilizar una nueva Sala de Chat
-custom.which  = \u00BFQu\u00E9 Sala de Chat desea mostrar?
-custom.called = llamada
-custom.msgdisp = Mostrar mensaje
-
-
-#Delete Vm
-
-delete.delete = Borrar mensaje del chat
-delete.sure = \u00BFEst\u00E1 seguro que desea borrar permanentemente este mensaje?
-
-
-#Layaut Vm
-
-lay.note = Todos los mensajes de chat son archivados y pueden leerse desde el sitio de cada participante.
-lay.user = Usuarios en el chat
-
-
-#List Vm
-
-list.del = Borrar este mensaje
-
-#Toolbar Vm (also used in Java)
-bar.onlytime = Solo hora
-bar.datetime = Fecha y hora
-bar.onlydate = Solo fecha
-bar.nodatetime = Ni fecha ni hora
-bar.allmes = Todos los mensajes
-bar.view=Mostrar
-bar.show=Mostrar
-bar.listnavselect = Lista de opciones: presione Alt + cursos (arriba o abajo) para desplazarse por el men\u00FA.
-
-# ###############################
-# all the new strings
-
-past_x_days= \u00DAltimos {0} d\u00EDas
-past_x_messages= \u00DAltimos {0} mensajes
-
-default_new_channel_title=Canal principal
-allMessages=Todos los mensajes
-timeOnly=S\u00F3lo hora
-timeAndDate=Fecha y hora
-dateOnly=S\u00F3lo fecha
-neitherDateOrTime=Ni fecha ni hora
-manage_tool=Herramienta de gesti\u00F3n
-lay_note=Todos los mensajes de chat se archivar\u00E1n y podr\u00E1n ser le\u00EDdos por cada miembro del sitio
-lay_restricted_note_days=\u00DAnicamente se archivar\u00E1n los mensajes de los \u00FAltimos {0} d\u00EDas para que puedan ser consultados por cualquier miembro del sitio.
-lay_restricted_note_messages= \u00DAnicamente se archivar\u00E1n los \u00FAltimos {0} mensajes para que puedan ser consultados por cualquier miembro del sitio.
-lay_user=Usuarios en el chat
-view=Ver
-
+#Thu Nov 18 07:39:13 CET 2010
+hidet=Ocultar hora
+custom.called=llamada
+custom.which=\u00BFQu\u00E9 Sala de Chat desea mostrar?
 add_room=A\u00F1adir sala
-change_room=Cambiar sala
-enter_the_chat_room=Entrar en la sala ''{0}'' 
-channel_creation_date=Fecha de creaci\u00F3n
-channel_description=Descripci\u00F3n
-channel_title=T\u00EDtulo
-
-edit_channel_title=Editar sala
-add_channel_title=A\u00F1adir sala
-
-message_display=Mensaje que mostrar
-
-perm_error=Permisos insuficientes para {0}
-
-message_owner=Propietario
-
-select_room_title=Seleccionar una sala de chat
-
-tool_options_title=Opciones de la herramienta
-synoptic_options_title=Opciones del resumen
-room_list_title=Gestionar salas
-
-monitor_panel=Lista
-presence_panel=Presencia
-control_panel=Control
-
-delete_room_confirm_title = Borrando una sala de chat
-delete_room_confirm_alert = \u00BFEst\u00E1 seguro de que desea borrar permanentemente esta sala de chat?
-
-#Synoptic pages
-recent_chat_heading= Mensajes recientes
-number_days=N\u00FAmero de d\u00EDas transcurridos
-number_messages=N\u00FAmero de mensajes de chat
-number_chars=N\u00FAmero de caracteres del mensaje de chat
-update_text=Actualizar
-
-title_required=El t\u00EDtulo es obligatorio
-
-set_default=Establecer como por defecto
-set_as_default=Establecer ''{0}'' como por defecto
-
-viewingChatRoomText=Actualmente, mostrando mensajes para ''{0}''
-
-back_to_room=Volver a la sala
-
-channel_enable_override_description=Permitir a los usuarios del sitio cambiar el aspecto de su propia ventana de chat
-
-
-channel_description_colon= Descripci\u00F3n:
-channel_title_colon= T\u00EDtulo:
-combox.viewfrom= Ver mensajes desde...
-control.lab= Introducir un mensaje de chat
-delete.wrong= \u00A1El mensaje ya hab\u00EDa sido borrado!
-delete_room_messages=Borrar historial
-delete_room_messages_confirm_alert= \u00BFEst\u00E1 seguro de que desea borrar permanentemente todos mensajes de esta sala de chat?
-delete_room_messages_confirm_title= Borrando todos los mensajes de esta sala de chat
-desc_too_long= La descripci\u00F3n debe tener menos de {0} caracteres
-lay_restricted_note_none= \u00DAnicamente los mensajes de la sesi\u00F3n actual puede ser le\u00EDdos por los participantes en este sitio.
-neg_num_error= Los n\u00FAmeros negativos no est\u00E1n permitidos
+bar.onlydate=Solo fecha
 shownone=No mostrar el hist\u00F3rico de mensajes
-title_too_long= El t\u00EDtulo debe tener menos de {0} caracteres
-uniqueid= Solo ID
-validation_error= Ha habido un error enviado este formulario. Los detalles espec\u00EDficos se muestran a continuaci\u00F3n.
+custom.howmany=\u00BFCu\u00E1ntos mensajes se mostrar\u00E1n?
+gen.from=De\:
+control_panel=Control
+lay_note=Todos los mensajes de chat se archivar\u00E1n y podr\u00E1n ser le\u00EDdos por cada miembro del sitio
+hided=Ocultar fecha
+number_messages=N\u00FAmero de mensajes de chat
+add_channel_title=A\u00F1adir sala
+control.clear=Limpiar
+back_to_room=Volver a la sala
+tool_options_title=Opciones de la herramienta
+lay_restricted_note_none=\u00DAnicamente los mensajes de la sesi\u00F3n actual puede ser le\u00EDdos por los participantes en este sitio.
+delete.wrong=\u00A1El mensaje ya hab\u00EDa sido borrado\!
+monitor_panel=Lista
+title_required=El t\u00EDtulo es obligatorio
+custom.showall=Mostrar todos los mensajes
+channel_description_colon=Descripci\u00F3n\:
+recent_chat_heading=Mensajes recientes
+gen.alert=Alerta\:
+change_room=Cambiar sala
+thereispro=No se pueden establecer los permisos porque el sitio est\u00E1 siendo editado por otro usuario. Cierre los permisos en las otras herramientas antes de continuar.
+past_x_messages=\u00DAltimos {0} mensajes
+thischat=El chat no est\u00E1 disponible.
+custom.use3=Utilizar una nueva Sala de Chat
+bar.view=Mostrar
+custom.use2=Utilizar la Sala de Chat llamada
+custom.use1=Utilizar la Sala de Chat principal del sitio
+number_days=N\u00FAmero de d\u00EDas transcurridos
+message_display=Mensaje que mostrar
+delete_room_messages=Borrar historial
+custom.cuschat=Opciones del chat
+bar.nodatetime=Ni fecha ni hora
+select_room_title=Seleccionar una sala de chat
+neitherDateOrTime=Ni fecha ni hora
+lay.note=Todos los mensajes de chat son archivados y pueden leerse desde el sitio de cada participante.
+room_list_title=Gestionar salas
+bar.onlytime=Solo hora
+days=D\u00EDas
+delete_room_messages_confirm_title=Borrando todos los mensajes de esta sala de chat
+delete.sure=\u00BFEst\u00E1 seguro que desea borrar permanentemente este mensaje?
+permis=Permisos
+turnoff=DESACTIVE la alerta de nuevo mensaje
+youent=Ha introducido
+on=on
+delete_room_messages_confirm_alert=\u00BFEst\u00E1 seguro de que desea borrar permanentemente todos mensajes de esta sala de chat?
+channel_creation_date=Fecha de creaci\u00F3n
+uniqueid=Solo ID
+combox.viewfrom=Ver mensajes desde...
+gen.edit=Editar
+edit_channel_title=Editar sala
+bar.allmes=Todos los mensajes
+messages=Mensajes
+synoptic_options_title=Opciones del resumen
+lay_user=Usuarios en el chat
+bar.datetime=Fecha y hora
+desc_too_long=La descripci\u00F3n debe tener menos de {0} caracteres
+lay_restricted_note_days=\u00DAnicamente se archivar\u00E1n los mensajes de los \u00FAltimos {0} d\u00EDas para que puedan ser consultados por cualquier miembro del sitio.
+update_text=Actualizar
+message_owner=Propietario
+manage_tool=Herramienta de gesti\u00F3n
+showlast=Mostrar los \u00FAltimos
+chatmesdel=Mensaje del chat borrado por
+allMessages=Todos los mensajes
+custom.msgdisp=Mostrar mensaje
+bar.show=Mostrar
+channel_description=Descripci\u00F3n
+control.lab=Introducir un mensaje de chat
+forchat=por nombre de Sala de Chat. Nombre de Sala de Chat
+number_chars=N\u00FAmero de caracteres del mensaje de chat
+showt=Mostrar hora
+set_as_default=Establecer ''{0}'' como por defecto
+perm_description=Establecer permisos para {0} en el sitio de trabajo ''{1}''
+showpast=Pasado
+viewingChatRoomText=Actualmente, mostrando mensajes para ''{0}''
+youdonot4=No tiene permiso para borrar mensajes de este chat.
+showtoday=Mostrar los mensajes de hoy
+youdonot3=No tiene permiso para ver enviar mensajes a este chat.
+youdonot2=No tiene permiso para crear este chat.
+youdonot1=No tiene permiso para ver este chat.
+timeAndDate=Fecha y hora
+custom.showlast=Mostrar los \u00FAltimos
+channel_enable_override_description=Permitir a los usuarios del sitio cambiar el aspecto de su propia ventana de chat
+setpermis=Establecer permisos en la Sala de Chat del sitio 
+showd=Mostrar fecha
+channel_title_colon=T\u00EDtulo\:
+delete.delete=Borrar mensaje del chat
+lay.user=Usuarios en el chat
+delete_room_confirm_title=Borrando una sala de chat
+channel_title=T\u00EDtulo
+bar.listnavselect=Lista de opciones\: presione Alt + cursos (arriba o abajo) para desplazarse por el men\u00FA.
+control.post=A\u00F1adir mensaje
+past_x_days=\u00DAltimos {0} d\u00EDas
+lay_restricted_note_messages=\u00DAnicamente se archivar\u00E1n los \u00FAltimos {0} mensajes para que puedan ser consultados por cualquier miembro del sitio.
+timeOnly=S\u00F3lo hora
+view=Ver
+gen.delete=Borrar
+gen.date=Fecha\:
+custom.showpast=Mostrar los mensajes de los \u00FAltimos
+validation_error=Ha habido un error enviado este formulario. Los detalles espec\u00EDficos se muestran a continuaci\u00F3n.
+showall=Todos los mensajes
+custom.days=d\u00EDas
+delete_room_confirm_alert=\u00BFEst\u00E1 seguro de que desea borrar permanentemente esta sala de chat?
+chatroom=Sala de Chat\:
+gen.save=Actualizar opciones
+list.del=Borrar este mensaje
+default_new_channel_title=Canal principal
+presence_panel=Presencia
+title_too_long=El t\u00EDtulo debe tener menos de {0} caracteres
+gen.cancel=Cancelar
+neg_num_error=Los n\u00FAmeros negativos no est\u00E1n permitidos
+custom.mess=mensajes
+dateOnly=S\u00F3lo fecha
+perm_error=Permisos insuficientes para {0}
+enter_the_chat_room=Entrar en la sala ''{0}'' 
+set_default=Establecer como por defecto
+therewaspro=Hubo un problema en el env\u00EDo del mensaje anterior.
+gen.mess=Mensaje\:
+turnon=ACTIVE la alerta de nuevo mensaje
+custom.chatroom=Sala de Chat
