--- a/chat-tool/tool/src/bundle/chat_ko.properties
+++ b/chat-tool/tool/src/bundle/chat_ko.properties
@@ -1,89 +1,61 @@
-#Java code	
-
-thischat = \ud574\ub2f9 \ucc44\ud305\uc740 \uc0ac\uc6a9\ud558\uc2e4 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4.
-chatmesdel = \ucc44\ud305 \uba54\uc138\uc9c0 \uc0ad\uc81c\uc790
-chatroom = \ucc44\ud305\ub8f8:
-days = \uc77c
-forchat = \ucc44\ud305\ub8f8\uba85
-hided = \ub0a0\uc9dc \uc228\uae30\uae30
-hidet = \uc2dc\uac04 \uc228\uae30\uae30
-messages = \uba54\uc138\uc9c0
-#on	
-permis = \uad8c\ud55c\uc124\uc815
-setpermis = \ucc44\ud305\ub8f8 \uad8c\ud55c \uc124\uc815:
-showall = \uc804\uccb4 \uba54\uc138\uc9c0
-showd = \ub0a0\uc9dc \ubcf4\uae30
-showlast = \ub9c8\uc9c0\ub9c9 \ubcf4\uae30
-showpast = \uacfc\uac70
-showt = \uc2dc\uac04 \ubcf4\uae30
-showtoday = \uc624\ub298\uc758 \uba54\uc138\uc9c0 \ubcf4\uae30
-thereispro = \ud604\uc7ac \uad8c\ud55c\uc124\uc815\uc5d0 \ubb38\uc81c\uac00 \ubc1c\uc0dd\ud558\uc600\uc2b5\ub2c8\ub2e4.
-therewaspro = \uc774\uc804 \uba54\uc138\uc9c0\ub97c \uc804\uc1a1\ud558\ub294\ub370 \ubb38\uc81c\uac00 \ubc1c\uc0dd\ud558\uc600\uc2b5\ub2c8\ub2e4.
-turnoff = \uc0c8 \uba54\uc138\uc9c0 \ub3c4\ucc29 \uc54c\ub9bc \ub044\uae30
-turnon = \uc0c8 \uba54\uc138\uc9c0 \ub3c4\ucc29 \uc54c\ub9bc \ucf1c\uae30
-youdonot1 = \ud574\ub2f9 \ucc44\ud305\uc744 \ubcfc \uc218 \uc788\ub294 \uad8c\ud55c\uc774 \uc5c6\uc2b5\ub2c8\ub2e4. 
-youdonot2 = \ud574\ub2f9 \ucc44\ud305\uc744 \uc791\uc131\ud560 \uc218 \uc788\ub294 \uad8c\ud55c\uc774 \uc5c6\uc2b5\ub2c8\ub2e4.
-youdonot3 = \ud574\ub2f9 \ucc44\ud305\uc744 \uac8c\uc2dc\ud560 \uc218 \uc788\ub294 \uad8c\ud55c\uc774 \uc5c6\uc2b5\ub2c8\ub2e4. 
-youdonot4 = \ud574\ub2f9 \ucc44\ud305 \uba54\uc138\uc9c0\ub97c \uc0ad\uc81c\ud560 \uc218 \uc788\ub294 \uad8c\ud55c\uc774 \uc5c6\uc2b5\ub2c8\ub2e4.
-youent = \uc785\ub825\ud558\uc600\uc2b5\ub2c8\ub2e4
-
-
-#General Vm	
-
-gen.alert = \uacbd\uace0:
-gen.cancel = \ucde8\uc18c\ud558\uae30
-gen.date = \ub0a0\uc9dc:
-gen.delete = \uc0ad\uc81c\ud558\uae30
-gen.from = \uc791\uc131\uc790:
-gen.mess = \uba54\uc138\uc9c0:
-gen.save = \uc800\uc7a5\ud558\uae30
-
-
-#Control Vm	
-
-control.clear = \uba54\uc138\uc9c0 \uc9c0\uc6b0\uae30
-control.post = \uba54\uc138\uc9c0 \uc791\uc131\ud558\uae30
-
-
-#Customize Vm	
-
-custom.chatroom = \ucc44\ud305\ub8f8
-custom.cuschat = \ucc44\ud305\ub8f8 \uc635\uc158
-custom.days = \uc77c\uac04
-custom.howmany = \uba87 \uac1c\uc758 \uba54\uc138\uc9c0\ub97c \ud45c\uc2dc\ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c?
-custom.mess = \uac1c \uba54\uc138\uc9c0
-custom.showall = \uc804\uccb4 \uba54\uc138\uc9c0
-custom.showlast = \ucd5c\uadfc 
-custom.showpast = \uacfc\uac70
-custom.use1 = \uc0ac\uc774\ud2b8 \uba54\uc778 \ucc44\ud305\ub8f8 \uc774\uc6a9\ud558\uae30
-custom.use2 = \uc544\ub798 \uc9c0\uc815\ud55c \uc774\ub984\uc758 \ucc44\ud305\ub8f8 \uc0ac\uc6a9\ud558\uae30
-custom.use3 = \uc544\ub798 \uc9c0\uc815\ud55c \uc774\ub984\uc758 \ucc44\ud305\ub8f8 \uc0ac\uc6a9\ud558\uae30 - 
-custom.which = \ucc44\ud305\ub8f8\uc744 \uc120\ud0dd\ud574\uc8fc\uc2ed\uc2dc\uc624.
-custom.called = - 
-custom.msgdisp = \uba54\uc138\uc9c0 \ud45c\uc2dc
-
-
-#Delete Vm	
-
-delete.delete = \ucc44\ud305 \uba54\uc138\uc9c0 \uc0ad\uc81c\ud558\uae30
-delete.sure = \ud574\ub2f9 \uba54\uc138\uc9c0\ub97c \uc815\ub9d0\ub85c \uc0ad\uc81c\ud558\uc2dc\uaca0\uc2b5\ub2c8\uae4c?
-
-
-#Layaut Vm	
-
-lay.note = \ubaa8\ub4e0 \uba54\uc138\uc9c0\uac00 \ubcf4\uad00\ub418\uc5c8\uc73c\uba70 \ubaa8\ub4e0 \uc0ac\uc774\ud2b8 \ud68c\uc6d0\uc774 \uc77d\uc744 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
-lay.user = \ucc44\ud305\uc911\uc778 \ud68c\uc6d0
-
-
-#List Vm	
-
-list.del = \ud574\ub2f9 \uba54\uc138\uc9c0 \uc0ad\uc81c\ud558\uae30
-
-#Toolbar Vm (also used in Java)	
-bar.onlytime = \uc2dc\uac04
-bar.datetime = \ub0a0\uc9dc\uc640 \uc2dc\uac04
-bar.onlydate = \ub0a0\uc9dc
-bar.nodatetime = \ub0a0\uc9dc \ubc0f \uc2dc\uac04 \uc81c\uc678
-bar.allmes = \uc804\uccb4 \uba54\uc138\uc9c0
-bar.view = \ubcf4\uae30
-bar.show = \ud45c\uc2dc
+#Thu Nov 18 07:47:54 CET 2010
+custom.showlast=\uCD5C\uADFC 
+custom.called=- 
+setpermis=\uCC44\uD305\uB8F8 \uAD8C\uD55C \uC124\uC815\:
+hided=\uB0A0\uC9DC \uC228\uAE30\uAE30
+forchat=\uCC44\uD305\uB8F8\uBA85
+lay.user=\uCC44\uD305\uC911\uC778 \uD68C\uC6D0
+days=\uC77C
+showtoday=\uC624\uB298\uC758 \uBA54\uC138\uC9C0 \uBCF4\uAE30
+therewaspro=\uC774\uC804 \uBA54\uC138\uC9C0\uB97C \uC804\uC1A1\uD558\uB294\uB370 \uBB38\uC81C\uAC00 \uBC1C\uC0DD\uD558\uC600\uC2B5\uB2C8\uB2E4.
+bar.view=\uBCF4\uAE30
+bar.nodatetime=\uB0A0\uC9DC \uBC0F \uC2DC\uAC04 \uC81C\uC678
+custom.howmany=\uBA87 \uAC1C\uC758 \uBA54\uC138\uC9C0\uB97C \uD45C\uC2DC\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
+control.clear=\uBA54\uC138\uC9C0 \uC9C0\uC6B0\uAE30
+youent=\uC785\uB825\uD558\uC600\uC2B5\uB2C8\uB2E4
+gen.cancel=\uCDE8\uC18C\uD558\uAE30
+showt=\uC2DC\uAC04 \uBCF4\uAE30
+showlast=\uB9C8\uC9C0\uB9C9 \uBCF4\uAE30
+messages=\uBA54\uC138\uC9C0
+gen.date=\uB0A0\uC9DC\:
+turnoff=\uC0C8 \uBA54\uC138\uC9C0 \uB3C4\uCC29 \uC54C\uB9BC \uB044\uAE30
+gen.alert=\uACBD\uACE0\:
+showd=\uB0A0\uC9DC \uBCF4\uAE30
+list.del=\uD574\uB2F9 \uBA54\uC138\uC9C0 \uC0AD\uC81C\uD558\uAE30
+turnon=\uC0C8 \uBA54\uC138\uC9C0 \uB3C4\uCC29 \uC54C\uB9BC \uCF1C\uAE30
+custom.msgdisp=\uBA54\uC138\uC9C0 \uD45C\uC2DC
+bar.datetime=\uB0A0\uC9DC\uC640 \uC2DC\uAC04
+custom.chatroom=\uCC44\uD305\uB8F8
+youdonot4=\uD574\uB2F9 \uCC44\uD305 \uBA54\uC138\uC9C0\uB97C \uC0AD\uC81C\uD560 \uC218 \uC788\uB294 \uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
+youdonot3=\uD574\uB2F9 \uCC44\uD305\uC744 \uAC8C\uC2DC\uD560 \uC218 \uC788\uB294 \uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4. 
+youdonot2=\uD574\uB2F9 \uCC44\uD305\uC744 \uC791\uC131\uD560 \uC218 \uC788\uB294 \uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
+custom.showpast=\uACFC\uAC70
+custom.days=\uC77C\uAC04
+youdonot1=\uD574\uB2F9 \uCC44\uD305\uC744 \uBCFC \uC218 \uC788\uB294 \uAD8C\uD55C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4. 
+custom.showall=\uC804\uCCB4 \uBA54\uC138\uC9C0
+bar.allmes=\uC804\uCCB4 \uBA54\uC138\uC9C0
+delete.delete=\uCC44\uD305 \uBA54\uC138\uC9C0 \uC0AD\uC81C\uD558\uAE30
+custom.use3=\uC544\uB798 \uC9C0\uC815\uD55C \uC774\uB984\uC758 \uCC44\uD305\uB8F8 \uC0AC\uC6A9\uD558\uAE30 - 
+thischat=\uD574\uB2F9 \uCC44\uD305\uC740 \uC0AC\uC6A9\uD558\uC2E4 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+delete.sure=\uD574\uB2F9 \uBA54\uC138\uC9C0\uB97C \uC815\uB9D0\uB85C \uC0AD\uC81C\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
+custom.use2=\uC544\uB798 \uC9C0\uC815\uD55C \uC774\uB984\uC758 \uCC44\uD305\uB8F8 \uC0AC\uC6A9\uD558\uAE30
+gen.from=\uC791\uC131\uC790\:
+custom.use1=\uC0AC\uC774\uD2B8 \uBA54\uC778 \uCC44\uD305\uB8F8 \uC774\uC6A9\uD558\uAE30
+gen.mess=\uBA54\uC138\uC9C0\:
+custom.cuschat=\uCC44\uD305\uB8F8 \uC635\uC158
+control.post=\uBA54\uC138\uC9C0 \uC791\uC131\uD558\uAE30
+showall=\uC804\uCCB4 \uBA54\uC138\uC9C0
+bar.onlytime=\uC2DC\uAC04
+gen.delete=\uC0AD\uC81C\uD558\uAE30
+thereispro=\uD604\uC7AC \uAD8C\uD55C\uC124\uC815\uC5D0 \uBB38\uC81C\uAC00 \uBC1C\uC0DD\uD558\uC600\uC2B5\uB2C8\uB2E4.
+bar.show=\uD45C\uC2DC
+permis=\uAD8C\uD55C\uC124\uC815
+custom.mess=\uAC1C \uBA54\uC138\uC9C0
+hidet=\uC2DC\uAC04 \uC228\uAE30\uAE30
+chatroom=\uCC44\uD305\uB8F8\:
+gen.save=\uC800\uC7A5\uD558\uAE30
+chatmesdel=\uCC44\uD305 \uBA54\uC138\uC9C0 \uC0AD\uC81C\uC790
+bar.onlydate=\uB0A0\uC9DC
+lay.note=\uBAA8\uB4E0 \uBA54\uC138\uC9C0\uAC00 \uBCF4\uAD00\uB418\uC5C8\uC73C\uBA70 \uBAA8\uB4E0 \uC0AC\uC774\uD2B8 \uD68C\uC6D0\uC774 \uC77D\uC744 \uC218 \uC788\uC2B5\uB2C8\uB2E4.
+showpast=\uACFC\uAC70
+custom.which=\uCC44\uD305\uB8F8\uC744 \uC120\uD0DD\uD574\uC8FC\uC2ED\uC2DC\uC624.
