--- a/chat-tool/tool/src/bundle/chat_pt_PT.properties
+++ b/chat-tool/tool/src/bundle/chat_pt_PT.properties
@@ -1,125 +1,125 @@
-#Stored by I18NEdit, may be edited!
-add_channel_title=Criar sala
-add_room=Criar sala
-allMessages=Todas as mensagens
-back_to_room=Voltar \u00E0 sala
-bar.allmes=Todas as mensagens
-bar.datetime=Data e hora
-bar.listnavselect=Op\u00E7\u00F5es de lista\: pressione ALT + setas CIMA e BAIXO para navegar pelo menu
-bar.nodatetime=Nenhum
-bar.onlydate=Apenas data
-bar.onlytime=Apenas hora
-bar.show=Mostrar
-bar.view=Ver
-change_room=Alterar sala
-channel_creation_date=Data de cria\u00E7\u00E3o
-channel_description=Descri\u00E7\u00E3o
-channel_description_colon=Descri\u00E7\u00E3o\:
-channel_enable_override_description=Permitir aos participantes da \u00E1rea a altera\u00E7\u00E3o das suas op\u00E7\u00F5es de visualiza\u00E7\u00E3o
-channel_title=T\u00EDtulo
-channel_title_colon=T\u00EDtulo\:
-chatmesdel=Mensagem eliminada por
-chatroom=Sala de chat\:
-control.clear=Limpar
-control.post=Enviar mensagem
-control_panel=Controle
-custom.called=chamado
-custom.chatroom=Sala de chat
-custom.cuschat=Op\u00E7\u00F5es do chat
-custom.days=dias
-custom.howmany=Quantas mensagens ser\u00E3o mostradas?
-custom.mess=mensagens
-custom.msgdisp=Mostrar mensagem
-custom.showall=Mostrar todas as mensagens
-custom.showlast=Mostrar as \u00FAltimas
-custom.showpast=Mostrar mensagens dos \u00FAltimos
-custom.use1=Utilizar esta sala de chat principal
-custom.use2=Utilizar a sala de chat
-custom.use3=Utilizar uma nova sala de chat
-custom.which=Que sala de chat ser\u00E1 mostrada?
-dateOnly=Apenas data
-days=Dias
-default_new_channel_title=Sala de chat principal
-delete.delete=A eliminar mensagem
-delete.sure=Pretende eliminar permanentemente esta mensagem?
-delete_room_confirm_alert=Pretende eliminar permanentemente esta sala de chat?
-delete_room_confirm_title=A eliminar sala de chat
-delete_room_messages=Limpar hist\u00F3rico
-delete_room_messages_confirm_alert=Pretende eliminar permanentemente todas as mensagem desta sala de chat?
-delete_room_messages_confirm_title=A eliminar todas as mensagens da sala de chat
-desc_too_long=A descri\u00E7\u00E3o tem de ter menos de {0} caracteres
-edit_channel_title=Editar sala
-enter_the_chat_room=Entrar na sala "{0}"
-forchat=para o nome da sala de chat. Nome da sala de chat
-gen.alert=Aviso\:
-gen.cancel=Cancelar
-gen.date=Data\:
-gen.delete=Eliminar
-gen.edit=Editar
-gen.from=De\:
-gen.mess=Mensagem\:
-gen.save=Actualizar op\u00E7\u00F5es
-hided=Esconder data
+#Thu Nov 18 07:50:26 CET 2010
 hidet=Esconder hora
-lay.note=Todas as mensagens est\u00E3o arquivadas e podem ser lidas por qualquer participante da \u00E1rea.
-lay.user=Utilizadores no chat
-lay_note=Todas as mensagens est\u00E3o arquivadas e podem ser lidas por qualquer participante da \u00E1rea.
-lay_restricted_note_days=Apenas mensagens dos \u00FAltimos {0} dias est\u00E3o arquivadas e podem ser lidas por qualquer participante da \u00E1rea. 
-lay_restricted_note_messages=Apenas as \u00FAltimas {0} mensagens est\u00E3o arquivadas e podem ser lidas por qualquer participante da \u00E1rea. 
-lay_restricted_note_none=Apenas as mensagens da sess\u00E3o actual podem ser lidas por qualquer participante da \u00E1rea. 
-lay_user=Utilizadores no chat
-list.del=Eliminar esta mensagem
-manage_tool=Op\u00E7\u00F5es
-message_display=Mostrar mensagem
-message_owner=Dono
-messages=Mensagens
-monitor_panel=Lista
-neg_num_error=N\u00E3o s\u00E3o permitidos n\u00FAmeros negativos
-neitherDateOrTime=Nenhum
-number_chars=N\u00FAmero de caracteres por mensagem de chat
-number_days=N\u00FAmero de dias no passado
-number_messages=N\u00FAmero de mensagens
-on=em
-past_x_days=\u00DAltimos {0} dias
-past_x_messages=\u00DAltimas {0} mensagens
-perm_description=Definir permiss\u00F5es para {0} na \u00E1rea "{1}"
-perm_error=Permiss\u00F5es insuficientes para {0}
-permis=Permiss\u00F5es
-presence_panel=Presen\u00E7as
-recent_chat_heading=Mensagens de chat recentes
-room_list_title=Gerir salas
-select_room_title=Seleccionar sala de chat
-set_as_default=Utilizar "{0}" por defeito
-set_default=Utilizar por defeito
-setpermis=Definir permiss\u00F5es para a sala de chat na \u00E1rea
-showall=Todas as mensagens
-showd=Mostar data
-showlast=Mostrar \u00FAltimas
+custom.called=chamado
+custom.which=Que sala de chat ser\u00E1 mostrada?
+bar.onlydate=Apenas data
+add_room=Criar sala
 shownone=N\u00E3o mostrar hist\u00F3rico de mensagens
-showpast=\u00DAltimas
-showt=Mostrar hora
-showtoday=Mostrar mensagens do dia
-synoptic_options_title=Op\u00E7\u00F5es do sin\u00F3ptico
-thereispro=N\u00E3o podem ser definidas permiss\u00F5es porque a \u00E1rea est\u00E1 a ser editada. Feche as permiss\u00F5es nas outras ferramentas antes de proceder.
-therewaspro=Ocorreu um erro ao enviar a mensagem anterior.
-thischat=Este chat n\u00E3o est\u00E1 dispon\u00EDvel.
-timeAndDate=Data e hora
-timeOnly=Apenas hora
-title_required=\u00C9 necess\u00E1rio um t\u00EDtulo
-title_too_long=O t\u00EDtulo tem de ter menos de {0} caracteres
+custom.howmany=Quantas mensagens ser\u00E3o mostradas?
+gen.from=De\:
+lay_note=Todas as mensagens est\u00E3o arquivadas e podem ser lidas por qualquer participante da \u00E1rea.
+control_panel=Controle
+hided=Esconder data
+number_messages=N\u00FAmero de mensagens
+add_channel_title=Criar sala
+control.clear=Limpar
+back_to_room=Voltar \u00E0 sala
 tool_options_title=Op\u00E7\u00F5es da ferramenta
+lay_restricted_note_none=Apenas as mensagens da sess\u00E3o actual podem ser lidas por qualquer participante da \u00E1rea. 
+delete.wrong=A mensagem j\u00E1 foi eliminada\!
+monitor_panel=Lista
+title_required=\u00C9 necess\u00E1rio um t\u00EDtulo
+custom.showall=Mostrar todas as mensagens
+recent_chat_heading=Mensagens de chat recentes
+gen.alert=Aviso\:
+channel_description_colon=Descri\u00E7\u00E3o\:
+thereispro=N\u00E3o podem ser definidas permiss\u00F5es porque a \u00E1rea est\u00E1 a ser editada. Feche as permiss\u00F5es nas outras ferramentas antes de proceder.
+past_x_messages=\u00DAltimas {0} mensagens
+change_room=Alterar sala
+thischat=Este chat n\u00E3o est\u00E1 dispon\u00EDvel.
+custom.use3=Utilizar uma nova sala de chat
+bar.view=Ver
+custom.use2=Utilizar a sala de chat
+custom.use1=Utilizar esta sala de chat principal
+number_days=N\u00FAmero de dias no passado
+message_display=Mostrar mensagem
+delete_room_messages=Limpar hist\u00F3rico
+custom.cuschat=Op\u00E7\u00F5es do chat
+bar.nodatetime=Nenhum
+select_room_title=Seleccionar sala de chat
+neitherDateOrTime=Nenhum
+lay.note=Todas as mensagens est\u00E3o arquivadas e podem ser lidas por qualquer participante da \u00E1rea.
+room_list_title=Gerir salas
+bar.onlytime=Apenas hora
+days=Dias
+delete_room_messages_confirm_title=A eliminar todas as mensagens da sala de chat
+delete.sure=Pretende eliminar permanentemente esta mensagem?
+permis=Permiss\u00F5es
 turnoff=Desligar alerta de novas mensagens
-turnon=Ligar alerta de novas mensagens
-uniqueid=Apenas ID
-update_text=Actualizar
-validation_error=Ocorreu um erro ao submeter o formul\u00E1rio. Verifique as mensagens relacionadas abaixo.
-view=Ver
-viewingChatRoomText=A ver mensagens da "{0}"
-youdonot1=N\u00E3o tem permiss\u00F5es para ver este chat.
-youdonot2=N\u00E3o tem permiss\u00F5es para criar este chat.
-youdonot3=N\u00E3o tem permiss\u00F5es para enviar mensagens neste chat.
-youdonot4=N\u00E3o tem permiss\u00F5es para eliminar esta mensagem.
 youent=Introduziu
+on=em
+delete_room_messages_confirm_alert=Pretende eliminar permanentemente todas as mensagem desta sala de chat?
+channel_creation_date=Data de cria\u00E7\u00E3o
+uniqueid=Apenas ID
 combox.viewfrom=Ver mensagens de...
+gen.edit=Editar
+edit_channel_title=Editar sala
+messages=Mensagens
+bar.allmes=Todas as mensagens
+synoptic_options_title=Op\u00E7\u00F5es do sin\u00F3ptico
+lay_user=Utilizadores no chat
+bar.datetime=Data e hora
+desc_too_long=A descri\u00E7\u00E3o tem de ter menos de {0} caracteres
+lay_restricted_note_days=Apenas mensagens dos \u00FAltimos {0} dias est\u00E3o arquivadas e podem ser lidas por qualquer participante da \u00E1rea. 
+update_text=Actualizar
+message_owner=Dono
+showlast=Mostrar \u00FAltimas
+manage_tool=Op\u00E7\u00F5es
+chatmesdel=Mensagem eliminada por
+allMessages=Todas as mensagens
+custom.msgdisp=Mostrar mensagem
+bar.show=Mostrar
+channel_description=Descri\u00E7\u00E3o
 control.lab=Introduza a mensagem
-delete.wrong=A mensagem j\u00e1 foi eliminada!
+forchat=para o nome da sala de chat. Nome da sala de chat
+number_chars=N\u00FAmero de caracteres por mensagem de chat
+showt=Mostrar hora
+set_as_default=Utilizar "{0}" por defeito
+perm_description=Definir permiss\u00F5es para {0} na \u00E1rea "{1}"
+showpast=\u00DAltimas
+viewingChatRoomText=A ver mensagens da "{0}"
+youdonot4=N\u00E3o tem permiss\u00F5es para eliminar esta mensagem.
+showtoday=Mostrar mensagens do dia
+youdonot3=N\u00E3o tem permiss\u00F5es para enviar mensagens neste chat.
+youdonot2=N\u00E3o tem permiss\u00F5es para criar este chat.
+youdonot1=N\u00E3o tem permiss\u00F5es para ver este chat.
+timeAndDate=Data e hora
+custom.showlast=Mostrar as \u00FAltimas
+setpermis=Definir permiss\u00F5es para a sala de chat na \u00E1rea
+channel_enable_override_description=Permitir aos participantes da \u00E1rea a altera\u00E7\u00E3o das suas op\u00E7\u00F5es de visualiza\u00E7\u00E3o
+showd=Mostar data
+channel_title_colon=T\u00EDtulo\:
+delete.delete=A eliminar mensagem
+lay.user=Utilizadores no chat
+delete_room_confirm_title=A eliminar sala de chat
+past_x_days=\u00DAltimos {0} dias
+bar.listnavselect=Op\u00E7\u00F5es de lista\: pressione ALT + setas CIMA e BAIXO para navegar pelo menu
+control.post=Enviar mensagem
+channel_title=T\u00EDtulo
+timeOnly=Apenas hora
+lay_restricted_note_messages=Apenas as \u00FAltimas {0} mensagens est\u00E3o arquivadas e podem ser lidas por qualquer participante da \u00E1rea. 
+view=Ver
+gen.delete=Eliminar
+gen.date=Data\:
+custom.showpast=Mostrar mensagens dos \u00FAltimos
+validation_error=Ocorreu um erro ao submeter o formul\u00E1rio. Verifique as mensagens relacionadas abaixo.
+showall=Todas as mensagens
+custom.days=dias
+delete_room_confirm_alert=Pretende eliminar permanentemente esta sala de chat?
+chatroom=Sala de chat\:
+gen.save=Actualizar op\u00E7\u00F5es
+list.del=Eliminar esta mensagem
+default_new_channel_title=Sala de chat principal
+presence_panel=Presen\u00E7as
+title_too_long=O t\u00EDtulo tem de ter menos de {0} caracteres
+gen.cancel=Cancelar
+neg_num_error=N\u00E3o s\u00E3o permitidos n\u00FAmeros negativos
+custom.mess=mensagens
+dateOnly=Apenas data
+perm_error=Permiss\u00F5es insuficientes para {0}
+enter_the_chat_room=Entrar na sala "{0}"
+set_default=Utilizar por defeito
+therewaspro=Ocorreu um erro ao enviar a mensagem anterior.
+turnon=Ligar alerta de novas mensagens
+gen.mess=Mensagem\:
+custom.chatroom=Sala de chat
