--- a/chat-tool/tool/src/bundle/chat_zh_CN.properties
+++ b/chat-tool/tool/src/bundle/chat_zh_CN.properties
@@ -1,110 +1,110 @@
-#Stored by I18NEdit, may be edited!
-add_channel_title=\u6DFB\u52A0\u7B54\u7591\u5BA4
-add_room=\u6DFB\u52A0\u7B54\u7591\u5BA4
-allMessages=\u6240\u6709\u6D88\u606F
-back_to_room=\u56DE\u5230\u7B54\u7591\u5BA4
-bar.allmes=\u6240\u6709\u4FE1\u606F
-bar.datetime=\u65E5\u671F\u548C\u65F6\u95F4
-bar.listnavselect=\u5217\u8868\u9009\u9879\uFF1A\u6309 alt+\u4E0A\u4E0B\u7BAD\u5934\u952E\u6EDA\u52A8\u83DC\u5355
-bar.nodatetime=\u65E0\u65E5\u671F\u6216\u65F6\u95F4
-bar.onlydate=\u4EC5\u65E5\u671F
-bar.onlytime=\u4EC5\u65F6\u95F4
-bar.show=\u663E\u793A
-bar.view=\u6D4F\u89C8
-change_room=\u66F4\u6539\u7B54\u7591\u5BA4
-channel_creation_date=\u521B\u5EFA\u65E5\u671F
-channel_description=\u63CF\u8FF0
-channel_enable_override_description=\u5141\u8BB8\u7AD9\u70B9\u7528\u6237\u6539\u53D8\u4ED6\u4EEC\u81EA\u5DF1\u7684\u7B54\u7591\u663E\u793A\u65B9\u5F0F
-channel_title=\u6807\u9898
-chatmesdel=\u5DF2\u88AB\u5220\u9664\u7684\u91CA\u7591\u4FE1\u606F\u3002
-chatroom=\u7B54\u7591\u5BA4\uFF1A
-control.clear=\u6E05\u9664
-control.post=\u6DFB\u52A0\u4FE1\u606F
-control_panel=\u63A7\u5236
-custom.called=\u540D\u79F0
-custom.chatroom=\u7B54\u7591\u5BA4
-custom.cuschat=\u7B54\u7591\u9009\u9879
-custom.days=\u5929\u6570
-custom.howmany=\u591A\u5C11\u4FE1\u606F\u5C06\u88AB\u663E\u793A\uFF1F
-custom.mess=\u4FE1\u606F
-custom.msgdisp=\u4FE1\u606F\u663E\u793A
-custom.showall=\u663E\u793A\u6240\u6709\u4FE1\u606F
-custom.showlast=\u663E\u793A\u6700\u540E\u7684
-custom.showpast=\u663E\u793A\u4EE5\u524D\u7684\u4FE1\u606F
-custom.use1=\u4F7F\u7528\u672C\u7AD9\u70B9\u7684\u4E3B\u7B54\u7591\u5BA4
-custom.use2=\u4F7F\u7528\u7B54\u7591\u5BA4\uFF1A
-custom.use3=\u4F7F\u7528\u4E00\u4E2A\u65B0\u7B54\u7591\u5BA4
-custom.which=\u54EA\u4E2A\u7B54\u7591\u5BA4\u5C06\u88AB\u663E\u793A\uFF1F
-dateOnly=\u4EC5\u5929\u6570
-days=\u5929\u6570
-default_new_channel_title=\u4E3B\u7B54\u7591\u5BA4
-delete.delete=\u5220\u9664\u7B54\u7591\u4FE1\u606F
-delete.sure=\u60A8\u786E\u8BA4\u8981\u6C38\u4E45\u5220\u9664\u6B64\u4FE1\u606F\u5417\uFF1F
-delete_room_confirm_alert=\u4F60\u786E\u5B9A\u8981\u6C38\u4E45\u5220\u9664\u8BE5\u7B54\u7591\u5BA4\u4E48\uFF1F
-delete_room_confirm_title=\u5220\u9664\u7B54\u7591\u5BA4
-edit_channel_title=\u7F16\u8F91\u7B54\u7591\u5BA4\u4FE1\u606F
-enter_the_chat_room=\u8FDB\u5165\u7B54\u7591\u5BA4 ''{0}'' 
-forchat=\u7B54\u7591\u5BA4\u540D\u79F0
-gen.alert=\u8B66\u62A5\uFF1A
-gen.cancel=\u53D6\u6D88
-gen.date=\u65E5\u671F\uFF1A
-gen.delete=\u5220\u9664
-gen.edit=\u7F16\u8F91
-gen.from=\u6765\u81EA\uFF1A
-gen.mess=\u6D88\u606F\uFF1A
-gen.save=\u66F4\u65B0\u9009\u9879
-hided=\u9690\u85CF\u65E5\u671F
+#Thu Nov 18 07:52:19 CET 2010
 hidet=\u9690\u85CF\u65F6\u95F4
-lay.note=\u6240\u6709\u7B54\u7591\u6D88\u606F\u88AB\u5B58\u6863\u5E76\u53EF\u88AB\u4EFB\u4F55\u7F51\u7AD9\u5171\u4EAB\u8005\u6D4F\u89C8
-lay.user=\u6B63\u5728\u7B54\u7591\u7684\u7528\u6237
+custom.called=\u540D\u79F0
+custom.which=\u54EA\u4E2A\u7B54\u7591\u5BA4\u5C06\u88AB\u663E\u793A\uFF1F
+bar.onlydate=\u4EC5\u65E5\u671F
+add_room=\u6DFB\u52A0\u7B54\u7591\u5BA4
+custom.howmany=\u591A\u5C11\u4FE1\u606F\u5C06\u88AB\u663E\u793A\uFF1F
+gen.from=\u6765\u81EA\uFF1A
 lay_note=\u6240\u6709\u6D88\u606F\u88AB\u5B58\u6863\uFF0C\u672C\u7AD9\u70B9\u4EFB\u4F55\u7528\u6237\u53EF\u9605\u8BFB\u3002
-lay_restricted_note_days=\u53EA\u6709\u8FC7\u53BB\u7684 {0} \u5929\u7684\u6D88\u606F\u88AB\u5B58\u6863\uFF0C\u53EF\u4EE5\u88AB\u672C\u7AD9\u70B9\u7684\u7528\u6237\u9605\u8BFB\u3002
-lay_restricted_note_messages=\u53EA\u6709\u8FC7\u53BB\u7684 {0} \u6761\u6D88\u606F\u88AB\u5B58\u6863\uFF0C\u53EF\u4EE5\u88AB\u672C\u7AD9\u70B9\u7684\u7528\u6237\u9605\u8BFB\u3002 
-lay_user=\u804A\u5929\u4E2D\u7684\u7528\u6237
-list.del=\u5220\u9664\u672C\u4FE1\u606F
-manage_tool=\u9009\u9879
-message_display=\u663E\u793A\u4FE1\u606F
-message_owner=\u6240\u6709\u4EBA
-messages=\u4FE1\u606F
-monitor_panel=\u5217\u8868
-neitherDateOrTime=\u65E2\u975E\u65E5\u671F\u4E5F\u975E\u65F6\u95F4
-number_chars=\u6BCF\u6761\u6D88\u606F\u7684\u5B57\u7B26\u6570
-number_days=\u8FC7\u53BB\u7684\u5929\u6570
+control_panel=\u63A7\u5236
+hided=\u9690\u85CF\u65E5\u671F
 number_messages=\u7B54\u7591\u8BB0\u5F55\u6570
-on=\u5F00\u542F
-past_x_days=\u6700\u8FD1{0}\u5929
-past_x_messages=\u6700\u8FD1{0} \u6761\u6D88\u606F
-perm_description=\u5728\u7AD9\u70B9''{1}''\u4E2D\u4E3A {0} \u8BBE\u5B9A\u6743\u9650
-perm_error=\u5BF9 {0} \u65E0\u6743\u9650
-permis=\u6743\u9650
-presence_panel=\u5F53\u524D
-recent_chat_heading=\u6700\u8FD1\u7B54\u7591\u8BB0\u5F55
-room_list_title=\u7BA1\u7406\u7B54\u7591\u5BA4
-select_room_title=\u9009\u62E9\u7B54\u7591\u5BA4
-set_as_default=\u8BBE\u5B9A''{0}''\u4E3A\u9ED8\u8BA4
-set_default=\u8BBE\u5B9A\u4E3A\u9ED8\u8BA4
-setpermis=\u4E3A\u8BFE\u7A0B\u7AD9\u70B9\u7684\u7B54\u7591\u5BA4\u8BBE\u7F6E\u6743\u9650
-showall=\u6240\u6709\u4FE1\u606F
-showd=\u663E\u793A\u65E5\u671F
-showlast=\u663E\u793A\u6700\u8FD1\u7684
-showpast=\u8FC7\u53BB\u7684
-showt=\u663E\u793A\u65F6\u95F4
-showtoday=\u663E\u793A\u4ECA\u5929\u7684\u6D88\u606F
-synoptic_options_title=\u6982\u8981\u9009\u9879
-thereispro=\u7531\u4E8E\u8BE5\u7AD9\u70B9\u6B63\u5728\u88AB\u7F16\u8F91\uFF0C\u76EE\u524D\u4E0D\u80FD\u8BBE\u7F6E\u6743\u9650\u3002\u5173\u95ED\u5176\u5B83\u5DE5\u5177\u4E2D\u7684\u6743\u9650\u8BBE\u7F6E\u518D\u7EE7\u7EED\u3002
-therewaspro=\u524D\u4E00\u4FE1\u606F\u53D1\u9001\u6709\u95EE\u9898\u3002
-thischat=\u65E0\u6CD5\u8FDB\u884C\u7B54\u7591\u3002
-timeAndDate=\u65E5\u671F\u548C\u65F6\u95F4
-timeOnly=\u4EC5\u65F6\u95F4
-title_required=\u9700\u8981\u586B\u5199\u6807\u9898
+add_channel_title=\u6DFB\u52A0\u7B54\u7591\u5BA4
+control.clear=\u6E05\u9664
+back_to_room=\u56DE\u5230\u7B54\u7591\u5BA4
 tool_options_title=\u5DE5\u5177\u9009\u9879
+monitor_panel=\u5217\u8868
+title_required=\u9700\u8981\u586B\u5199\u6807\u9898
+custom.showall=\u663E\u793A\u6240\u6709\u4FE1\u606F
+recent_chat_heading=\u6700\u8FD1\u7B54\u7591\u8BB0\u5F55
+gen.alert=\u8B66\u62A5\uFF1A
+thereispro=\u7531\u4E8E\u8BE5\u7AD9\u70B9\u6B63\u5728\u88AB\u7F16\u8F91\uFF0C\u76EE\u524D\u4E0D\u80FD\u8BBE\u7F6E\u6743\u9650\u3002\u5173\u95ED\u5176\u5B83\u5DE5\u5177\u4E2D\u7684\u6743\u9650\u8BBE\u7F6E\u518D\u7EE7\u7EED\u3002
+past_x_messages=\u6700\u8FD1{0} \u6761\u6D88\u606F
+change_room=\u66F4\u6539\u7B54\u7591\u5BA4
+thischat=\u65E0\u6CD5\u8FDB\u884C\u7B54\u7591\u3002
+custom.use3=\u4F7F\u7528\u4E00\u4E2A\u65B0\u7B54\u7591\u5BA4
+bar.view=\u6D4F\u89C8
+custom.use2=\u4F7F\u7528\u7B54\u7591\u5BA4\uFF1A
+custom.use1=\u4F7F\u7528\u672C\u7AD9\u70B9\u7684\u4E3B\u7B54\u7591\u5BA4
+number_days=\u8FC7\u53BB\u7684\u5929\u6570
+message_display=\u663E\u793A\u4FE1\u606F
+custom.cuschat=\u7B54\u7591\u9009\u9879
+bar.nodatetime=\u65E0\u65E5\u671F\u6216\u65F6\u95F4
+select_room_title=\u9009\u62E9\u7B54\u7591\u5BA4
+lay.note=\u6240\u6709\u7B54\u7591\u6D88\u606F\u88AB\u5B58\u6863\u5E76\u53EF\u88AB\u4EFB\u4F55\u7F51\u7AD9\u5171\u4EAB\u8005\u6D4F\u89C8
+neitherDateOrTime=\u65E2\u975E\u65E5\u671F\u4E5F\u975E\u65F6\u95F4
+room_list_title=\u7BA1\u7406\u7B54\u7591\u5BA4
+bar.onlytime=\u4EC5\u65F6\u95F4
+days=\u5929\u6570
+delete.sure=\u60A8\u786E\u8BA4\u8981\u6C38\u4E45\u5220\u9664\u6B64\u4FE1\u606F\u5417\uFF1F
+permis=\u6743\u9650
 turnoff=\u5173\u95ED\u65B0\u4FE1\u606F\u901A\u77E5
-turnon=\u5F00\u542F\u65B0\u4FE1\u606F\u901A\u77E5
-update_text=\u66F4\u65B0
-view=\u67E5\u770B
-viewingChatRoomText=\u73B0\u5728\u6B63\u5728\u6D4F\u89C8\u7684\u6D88\u606F\u662F ''{0}''
-youdonot1=\u60A8\u65E0\u6743\u6D4F\u89C8\u6B64\u91CA\u7591\u5185\u5BB9
-youdonot2=\u60A8\u65E0\u6743\u521B\u5EFA\u6B64\u91CA\u7591\u5185\u5BB9
-youdonot3=\u60A8\u65E0\u6743\u53D1\u5E16\u81F3\u6B64\u91CA\u7591\u5185\u5BB9
-youdonot4=\u60A8\u65E0\u6743\u5220\u9664\u6B64\u91CA\u7591\u4FE1\u606F
 youent=\u60A8\u5DF2\u8FDB\u5165
+on=\u5F00\u542F
+channel_creation_date=\u521B\u5EFA\u65E5\u671F
+gen.edit=\u7F16\u8F91
+edit_channel_title=\u7F16\u8F91\u7B54\u7591\u5BA4\u4FE1\u606F
+bar.allmes=\u6240\u6709\u4FE1\u606F
+messages=\u4FE1\u606F
+synoptic_options_title=\u6982\u8981\u9009\u9879
+lay_user=\u804A\u5929\u4E2D\u7684\u7528\u6237
+bar.datetime=\u65E5\u671F\u548C\u65F6\u95F4
+lay_restricted_note_days=\u53EA\u6709\u8FC7\u53BB\u7684 {0} \u5929\u7684\u6D88\u606F\u88AB\u5B58\u6863\uFF0C\u53EF\u4EE5\u88AB\u672C\u7AD9\u70B9\u7684\u7528\u6237\u9605\u8BFB\u3002
+update_text=\u66F4\u65B0
+message_owner=\u6240\u6709\u4EBA
+showlast=\u663E\u793A\u6700\u8FD1\u7684
+manage_tool=\u9009\u9879
+chatmesdel=\u5DF2\u88AB\u5220\u9664\u7684\u91CA\u7591\u4FE1\u606F\u3002
+allMessages=\u6240\u6709\u6D88\u606F
+custom.msgdisp=\u4FE1\u606F\u663E\u793A
+bar.show=\u663E\u793A
+channel_description=\u63CF\u8FF0
+forchat=\u7B54\u7591\u5BA4\u540D\u79F0
+number_chars=\u6BCF\u6761\u6D88\u606F\u7684\u5B57\u7B26\u6570
+showt=\u663E\u793A\u65F6\u95F4
+set_as_default=\u8BBE\u5B9A''{0}''\u4E3A\u9ED8\u8BA4
+perm_description=\u5728\u7AD9\u70B9''{1}''\u4E2D\u4E3A {0} \u8BBE\u5B9A\u6743\u9650
+showpast=\u8FC7\u53BB\u7684
+viewingChatRoomText=\u73B0\u5728\u6B63\u5728\u6D4F\u89C8\u7684\u6D88\u606F\u662F ''{0}''
+youdonot4=\u60A8\u65E0\u6743\u5220\u9664\u6B64\u91CA\u7591\u4FE1\u606F
+showtoday=\u663E\u793A\u4ECA\u5929\u7684\u6D88\u606F
+youdonot3=\u60A8\u65E0\u6743\u53D1\u5E16\u81F3\u6B64\u91CA\u7591\u5185\u5BB9
+youdonot2=\u60A8\u65E0\u6743\u521B\u5EFA\u6B64\u91CA\u7591\u5185\u5BB9
+youdonot1=\u60A8\u65E0\u6743\u6D4F\u89C8\u6B64\u91CA\u7591\u5185\u5BB9
+timeAndDate=\u65E5\u671F\u548C\u65F6\u95F4
+custom.showlast=\u663E\u793A\u6700\u540E\u7684
+setpermis=\u4E3A\u8BFE\u7A0B\u7AD9\u70B9\u7684\u7B54\u7591\u5BA4\u8BBE\u7F6E\u6743\u9650
+channel_enable_override_description=\u5141\u8BB8\u7AD9\u70B9\u7528\u6237\u6539\u53D8\u4ED6\u4EEC\u81EA\u5DF1\u7684\u7B54\u7591\u663E\u793A\u65B9\u5F0F
+showd=\u663E\u793A\u65E5\u671F
+delete.delete=\u5220\u9664\u7B54\u7591\u4FE1\u606F
+lay.user=\u6B63\u5728\u7B54\u7591\u7684\u7528\u6237
+delete_room_confirm_title=\u5220\u9664\u7B54\u7591\u5BA4
+past_x_days=\u6700\u8FD1{0}\u5929
+bar.listnavselect=\u5217\u8868\u9009\u9879\uFF1A\u6309 alt+\u4E0A\u4E0B\u7BAD\u5934\u952E\u6EDA\u52A8\u83DC\u5355
+control.post=\u6DFB\u52A0\u4FE1\u606F
+channel_title=\u6807\u9898
+timeOnly=\u4EC5\u65F6\u95F4
+lay_restricted_note_messages=\u53EA\u6709\u8FC7\u53BB\u7684 {0} \u6761\u6D88\u606F\u88AB\u5B58\u6863\uFF0C\u53EF\u4EE5\u88AB\u672C\u7AD9\u70B9\u7684\u7528\u6237\u9605\u8BFB\u3002 
+view=\u67E5\u770B
+gen.delete=\u5220\u9664
+gen.date=\u65E5\u671F\uFF1A
+custom.showpast=\u663E\u793A\u4EE5\u524D\u7684\u4FE1\u606F
+showall=\u6240\u6709\u4FE1\u606F
+custom.days=\u5929\u6570
+delete_room_confirm_alert=\u4F60\u786E\u5B9A\u8981\u6C38\u4E45\u5220\u9664\u8BE5\u7B54\u7591\u5BA4\u4E48\uFF1F
+chatroom=\u7B54\u7591\u5BA4\uFF1A
+gen.save=\u66F4\u65B0\u9009\u9879
+list.del=\u5220\u9664\u672C\u4FE1\u606F
+default_new_channel_title=\u4E3B\u7B54\u7591\u5BA4
+presence_panel=\u5F53\u524D
+gen.cancel=\u53D6\u6D88
+custom.mess=\u4FE1\u606F
+dateOnly=\u4EC5\u5929\u6570
+perm_error=\u5BF9 {0} \u65E0\u6743\u9650
+enter_the_chat_room=\u8FDB\u5165\u7B54\u7591\u5BA4 ''{0}'' 
+set_default=\u8BBE\u5B9A\u4E3A\u9ED8\u8BA4
+therewaspro=\u524D\u4E00\u4FE1\u606F\u53D1\u9001\u6709\u95EE\u9898\u3002
+turnon=\u5F00\u542F\u65B0\u4FE1\u606F\u901A\u77E5
+gen.mess=\u6D88\u606F\uFF1A
+custom.chatroom=\u7B54\u7591\u5BA4
