--- a/chat-tool/tool/src/bundle/chat_zh_TW.properties
+++ b/chat-tool/tool/src/bundle/chat_zh_TW.properties
@@ -1,138 +1,123 @@
-
-#
-# Copyright (c) 2009 Sakai Foundation
-#
-# Licensed under the Educational Community License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-# http://www.osedu.org/licenses/ECL-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-# 
-thischat = \u6b64\u804a\u5929\u4e0d\u53ef\u4f7f\u7528\u3002 
-chatmesdel = \u522a\u9664\u804a\u5929\u8a0a\u606f\u4eba\u662f 
-chatroom = \u804a\u5929\u5ba4\uff1a 
-days = \u5929\u6578 
-forchat = \u804a\u5929\u5ba4\u540d\u7a31 
-hided = \u96b1\u85cf\u65e5\u671f 
-hidet = \u96b1\u85cf\u6642\u9593 
-messages = \u8a0a\u606f 
-on = \u958b\u555f 
-permis = \u6b0a\u9650 
-setpermis = \u7d66\u5de5\u4f5c\u7db2\u7ad9\u7684\u804a\u5929\u5ba4\u8a2d\u5b9a\u6b0a\u9650 
-perm_description = \u70ba\u7db2\u7ad9 \u201c{1}\u201d \u4e2d\u7684 {0} \u8a2d\u5b9a\u6b0a\u9650 
-showall = \u5168\u90e8\u8a0a\u606f 
-shownone = \u4e0d\u986f\u793a\u8a0a\u606f\u8a18\u9304 
-showd = \u986f\u793a\u65e5\u671f 
-showlast = \u986f\u793a\u6700\u8fd1\u7684 
-showpast = \u904e\u53bb\u7684 
-showt = \u986f\u793a\u6642\u9593 
-showtoday = \u986f\u793a\u4eca\u5929\u7684\u8a0a\u606f 
-thereispro = \u7531\u65bc\u8a72\u7db2\u7ad9\u6b63\u5728\u88ab\u7de8\u8f2f\uff0c\u76ee\u524d\u4e0d\u80fd\u8a2d\u5b9a\u6b0a\u9650\u3002\u8acb\u95dc\u9589\u5176\u5b83\u5de5\u5177\u4e2d\u7684\u6b0a\u9650\u8a2d\u5b9a\u5f8c\u518d\u7e7c\u7e8c\u3002 
-therewaspro = \u524d\u4e00\u8a0a\u606f\u50b3\u9001\u6709\u554f\u984c\u3002 
-turnoff = \u95dc\u9589\u65b0\u8a0a\u606f\u901a\u77e5 
-turnon = \u958b\u555f\u65b0\u8a0a\u606f\u901a\u77e5 
-youdonot1 = \u60a8\u7121\u6b0a\u6aa2\u8996\u6b64\u804a\u5929\u5ba4\u5167\u5bb9\u3002 
-youdonot2 = \u60a8\u7121\u6b0a\u5efa\u7acb\u6b64\u804a\u5929\u5167\u5bb9 
-youdonot3 = \u60a8\u7121\u6b0a\u767c\u4f48\u81f3\u6b64\u804a\u5929\u5ba4\u3002 
-youdonot4 = \u60a8\u7121\u6b0a\u522a\u9664\u6b64\u804a\u5929\u8a0a\u606f 
-youent = \u60a8\u5df2\u9032\u5165 
-gen.alert = \u8b66\u793a\uff1a 
-gen.cancel = \u53d6\u6d88 
-gen.date = \u65e5\u671f\uff1a 
-gen.delete = \u522a\u9664 
-gen.edit = \u7de8\u8f2f 
-gen.from = \u4f86\u81ea\uff1a 
-gen.mess = \u8a0a\u606f\uff1a 
-gen.save = \u66f4\u65b0\u9078\u9805 
-control.clear = \u6e05\u9664 
-control.post = \u65b0\u589e\u8a0a\u606f 
-custom.chatroom = \u804a\u5929\u5ba4 
-custom.cuschat = \u804a\u5929\u9078\u9805 
-custom.days = \u5929\u7684\u8a0a\u606f 
-custom.howmany = \u591a\u5c11\u5247\u8a0a\u606f\u5c07\u88ab\u986f\u793a\uff1f 
-custom.mess = \u5247\u8a0a\u606f 
-custom.showall = \u986f\u793a\u5168\u90e8\u8a0a\u606f 
-custom.showlast = \u986f\u793a\u524d 
-custom.showpast = \u986f\u793a\u904e\u53bb 
-custom.use1 = \u4f7f\u7528\u672c\u7db2\u7ad9\u7684\u4e3b\u804a\u5929\u5ba4 
-custom.use2 = \u4f7f\u7528\u804a\u5929\u5ba4\uff1a 
-custom.use3 = \u4f7f\u7528\u4e00\u500b\u65b0\u7684\u804a\u5929\u5ba4 
-custom.which = \u54ea\u500b\u804a\u5929\u5ba4\u5c07\u88ab\u986f\u793a\uff1f 
-custom.called = \u540d\u7a31 
-custom.msgdisp = \u8a0a\u606f\u986f\u793a 
-delete.delete = \u522a\u9664\u804a\u5929\u8a0a\u606f\u4e2d 
-delete.sure = \u60a8\u662f\u5426\u78ba\u5b9a\u8981\u6c38\u4e45\u522a\u9664\u6b64\u8a0a\u606f\uff1f 
-delete.wrong = \u8a0a\u606f\u5df2\u88ab\u522a\u9664\uff01 
-lay.note = \u5168\u90e8\u804a\u5929\u8a0a\u606f\u88ab\u5b58\u6a94\u4e26\u53ef\u88ab\u4efb\u4f55\u7db2\u7ad9\u5171\u7528\u8005\u95b1\u8b80\u3002 
-lay.user = \u804a\u5929\u5ba4\u4e2d\u7684\u4f7f\u7528\u8005 
-list.del = \u522a\u9664\u6b64\u8a0a\u606f 
-bar.onlytime = \u50c5\u6642\u9593 
-bar.datetime = \u65e5\u671f\u548c\u6642\u9593 
-bar.onlydate = \u50c5\u65e5\u671f 
-bar.nodatetime = \u6642\u9593\u548c\u65e5\u671f\u5747\u4e0d\u986f\u793a 
-bar.allmes = \u5168\u90e8\u8a0a\u606f 
-bar.view = \u6aa2\u8996 
-bar.show = \u986f\u793a 
-bar.listnavselect = \u5217\u51fa\u9078\u9805\uff1a\u6309[alt]+\u4e0a\u6216\u4e0b\u7bad\u865f\u9375\u4f86\u6372\u52d5\u529f\u80fd\u8868 
-past_x_days = \u524d {0} \u5929 
-past_x_messages = \u524d {0} \u5247\u8a0a\u606f 
-default_new_channel_title = \u4e3b\u804a\u5929\u5ba4 
-allMessages = \u5168\u90e8\u8a0a\u606f 
-timeOnly = \u50c5\u6642\u9593 
-timeAndDate = \u65e5\u671f\u548c\u6642\u9593 
-dateOnly = \u50c5\u65e5\u671f 
-neitherDateOrTime = \u6642\u9593\u548c\u65e5\u671f\u5747\u4e0d\u986f\u793a 
-uniqueid = \u50c5\u4f7f\u7528\u8005 ID 
-manage_tool = \u9078\u9805 
-lay_note = \u5168\u90e8\u804a\u5929\u8a0a\u606f\u88ab\u5b58\u6a94\u4e26\u53ef\u88ab\u4efb\u4f55\u7db2\u7ad9\u5171\u7528\u8005\u95b1\u8b80\u3002 
-lay_restricted_note_days = \u53ea\u6709\u904e\u53bb{0}\u5929\u7684\u8a0a\u606f\u88ab\u5b58\u6a94\u4e26\u53ef\u88ab\u4efb\u4f55\u7db2\u7ad9\u5171\u7528\u8005\u8b80\u53d6\u3002 
-lay_restricted_note_messages = \u53ea\u6709\u904e\u53bb{0}\u5247\u7684\u8a0a\u606f\u88ab\u5b58\u6a94\u4e26\u53ef\u88ab\u4efb\u4f55\u7db2\u7ad9\u5171\u7528\u8005\u8b80\u53d6\u3002 
-lay_restricted_note_none = \u53ea\u6709\u76ee\u524d\u6642\u6bb5\u4e2d\u7684\u8a0a\u606f\u80fd\u88ab\u672c\u7db2\u7ad9\u53c3\u8207\u8005\u8b80\u53d6\u3002 
-lay_user = \u804a\u5929\u5ba4\u4e2d\u7684\u4f7f\u7528\u8005 
-view = \u6aa2\u8996 
-add_room = \u65b0\u589e\u804a\u5929\u5ba4 
-change_room = \u8f49\u63db\u804a\u5929\u5ba4 
-enter_the_chat_room = \u9032\u5165''{0}''\u804a\u5929\u5ba4 
-channel_creation_date = \u5efa\u7acb\u65e5\u671f 
-channel_description = \u63cf\u8ff0 
-channel_description_colon = \u63cf\u8ff0\uff1a 
-channel_title = \u6a19\u984c 
-channel_title_colon = \u6a19\u984c\uff1a 
-edit_channel_title = \u7de8\u8f2f\u804a\u5929\u5ba4 
-add_channel_title = \u65b0\u589e\u804a\u5929\u5ba4 
-message_display = \u8a0a\u606f\u986f\u793a 
-perm_error = \u5c0d{0}\u6b0a\u9650\u4e0d\u8db3 
-message_owner = \u64c1\u6709\u4eba 
-select_room_title = \u9078\u64c7\u804a\u5929\u5ba4 
-tool_options_title = \u5de5\u5177\u9078\u9805 
-synoptic_options_title = \u6982\u8981\u9078\u9805 
-room_list_title = \u7ba1\u7406\u804a\u5929\u5ba4 
-monitor_panel = \u6e05\u55ae 
-presence_panel = \u986f\u793a\u72c0\u614b 
-control_panel = \u63a7\u5236 
-delete_room_confirm_title = \u522a\u9664\u804a\u5929\u5ba4\u4e2d 
-delete_room_confirm_alert = \u60a8\u662f\u5426\u78ba\u5b9a\u8981\u6c38\u4e45\u522a\u9664\u6b64\u804a\u5929\u5ba4\uff1f 
-delete_room_messages_confirm_title = \u522a\u9664\u804a\u5929\u5ba4\u4e2d\u7684\u5168\u90e8\u8a0a\u606f\u4e2d 
-delete_room_messages_confirm_alert = \u60a8\u662f\u5426\u78ba\u5b9a\u8981\u6c38\u4e45\u522a\u9664\u6b64\u804a\u5929\u5ba4\u4e2d\u7684\u5168\u90e8\u8a0a\u606f\uff1f 
-recent_chat_heading = \u6700\u8fd1\u804a\u5929\u8a18\u9304\u986f\u793a 
-number_days = \u904e\u53bb\u7684\u5929\u6578 
-number_messages = \u804a\u5929\u8a0a\u606f\u6578\u76ee 
-number_chars = \u6bcf\u5247\u8a0a\u606f\u7684\u5b57\u5143\u6578 
-update_text = \u66f4\u65b0 
-validation_error = \u905e\u4ea4\u6b64\u8868\u683c\u51fa\u73fe\u932f\u8aa4\u3002\u8acb\u53c3\u8003\u4ee5\u4e0b\u7279\u5b9a\u7684\u8a0a\u606f\u3002 
-title_required = \u6a19\u984c\u662f\u5fc5\u9808\u7684 
-title_too_long = \u6a19\u984c\u5fc5\u9808\u5c11\u65bc {0} \u5b57\u5143 
-desc_too_long = \u63cf\u8ff0\u5fc5\u9808\u5c11\u65bc {0} \u5b57\u5143 
-delete_room_messages = \u6e05\u9664\u8a18\u9304 
-set_default = \u8a2d\u5b9a\u70ba\u9810\u8a2d\u503c 
-set_as_default = \u8a2d\u5b9a"{0}"\u70ba\u9810\u8a2d\u503c 
-viewingChatRoomText = \u73fe\u5728\u6b63\u5728\u6aa2\u8996\u7684\u8a0a\u606f\u662f"{0}" 
-back_to_room = \u8fd4\u56de\u804a\u5929\u5ba4 
-channel_enable_override_description = \u5141\u8a31\u7db2\u7ad9\u53c3\u8207\u8005\u6539\u8b8a\u4ed6\u5011\u81ea\u5df1\u7684\u804a\u5929\u986f\u793a\u65b9\u5f0f 
-neg_num_error = \u4e0d\u5141\u8a31\u8ca0\u6578\u503c 
+#Thu Nov 18 07:53:09 CET 2010
+hidet=\u96B1\u85CF\u6642\u9593 
+custom.called=\u540D\u7A31 
+custom.which=\u54EA\u500B\u804A\u5929\u5BA4\u5C07\u88AB\u986F\u793A\uFF1F 
+add_room=\u65B0\u589E\u804A\u5929\u5BA4 
+bar.onlydate=\u50C5\u65E5\u671F 
+shownone=\u4E0D\u986F\u793A\u8A0A\u606F\u8A18\u9304 
+custom.howmany=\u591A\u5C11\u5247\u8A0A\u606F\u5C07\u88AB\u986F\u793A\uFF1F 
+gen.from=\u4F86\u81EA\uFF1A 
+control_panel=\u63A7\u5236 
+lay_note=\u5168\u90E8\u804A\u5929\u8A0A\u606F\u88AB\u5B58\u6A94\u4E26\u53EF\u88AB\u4EFB\u4F55\u7DB2\u7AD9\u5171\u7528\u8005\u95B1\u8B80\u3002 
+hided=\u96B1\u85CF\u65E5\u671F 
+number_messages=\u804A\u5929\u8A0A\u606F\u6578\u76EE 
+add_channel_title=\u65B0\u589E\u804A\u5929\u5BA4 
+control.clear=\u6E05\u9664 
+back_to_room=\u8FD4\u56DE\u804A\u5929\u5BA4 
+tool_options_title=\u5DE5\u5177\u9078\u9805 
+lay_restricted_note_none=\u53EA\u6709\u76EE\u524D\u6642\u6BB5\u4E2D\u7684\u8A0A\u606F\u80FD\u88AB\u672C\u7DB2\u7AD9\u53C3\u8207\u8005\u8B80\u53D6\u3002 
+delete.wrong=\u8A0A\u606F\u5DF2\u88AB\u522A\u9664\uFF01 
+monitor_panel=\u6E05\u55AE 
+title_required=\u6A19\u984C\u662F\u5FC5\u9808\u7684 
+custom.showall=\u986F\u793A\u5168\u90E8\u8A0A\u606F 
+recent_chat_heading=\u6700\u8FD1\u804A\u5929\u8A18\u9304\u986F\u793A 
+channel_description_colon=\u63CF\u8FF0\uFF1A 
+gen.alert=\u8B66\u793A\uFF1A 
+change_room=\u8F49\u63DB\u804A\u5929\u5BA4 
+thereispro=\u7531\u65BC\u8A72\u7DB2\u7AD9\u6B63\u5728\u88AB\u7DE8\u8F2F\uFF0C\u76EE\u524D\u4E0D\u80FD\u8A2D\u5B9A\u6B0A\u9650\u3002\u8ACB\u95DC\u9589\u5176\u5B83\u5DE5\u5177\u4E2D\u7684\u6B0A\u9650\u8A2D\u5B9A\u5F8C\u518D\u7E7C\u7E8C\u3002 
+past_x_messages=\u524D {0} \u5247\u8A0A\u606F 
+thischat=\u6B64\u804A\u5929\u4E0D\u53EF\u4F7F\u7528\u3002 
+custom.use3=\u4F7F\u7528\u4E00\u500B\u65B0\u7684\u804A\u5929\u5BA4 
+bar.view=\u6AA2\u8996 
+custom.use2=\u4F7F\u7528\u804A\u5929\u5BA4\uFF1A 
+custom.use1=\u4F7F\u7528\u672C\u7DB2\u7AD9\u7684\u4E3B\u804A\u5929\u5BA4 
+number_days=\u904E\u53BB\u7684\u5929\u6578 
+message_display=\u8A0A\u606F\u986F\u793A 
+delete_room_messages=\u6E05\u9664\u8A18\u9304 
+custom.cuschat=\u804A\u5929\u9078\u9805 
+bar.nodatetime=\u6642\u9593\u548C\u65E5\u671F\u5747\u4E0D\u986F\u793A 
+select_room_title=\u9078\u64C7\u804A\u5929\u5BA4 
+neitherDateOrTime=\u6642\u9593\u548C\u65E5\u671F\u5747\u4E0D\u986F\u793A 
+lay.note=\u5168\u90E8\u804A\u5929\u8A0A\u606F\u88AB\u5B58\u6A94\u4E26\u53EF\u88AB\u4EFB\u4F55\u7DB2\u7AD9\u5171\u7528\u8005\u95B1\u8B80\u3002 
+room_list_title=\u7BA1\u7406\u804A\u5929\u5BA4 
+bar.onlytime=\u50C5\u6642\u9593 
+days=\u5929\u6578 
+delete_room_messages_confirm_title=\u522A\u9664\u804A\u5929\u5BA4\u4E2D\u7684\u5168\u90E8\u8A0A\u606F\u4E2D 
+delete.sure=\u60A8\u662F\u5426\u78BA\u5B9A\u8981\u6C38\u4E45\u522A\u9664\u6B64\u8A0A\u606F\uFF1F 
+permis=\u6B0A\u9650 
+turnoff=\u95DC\u9589\u65B0\u8A0A\u606F\u901A\u77E5 
+youent=\u60A8\u5DF2\u9032\u5165 
+on=\u958B\u555F 
+delete_room_messages_confirm_alert=\u60A8\u662F\u5426\u78BA\u5B9A\u8981\u6C38\u4E45\u522A\u9664\u6B64\u804A\u5929\u5BA4\u4E2D\u7684\u5168\u90E8\u8A0A\u606F\uFF1F 
+channel_creation_date=\u5EFA\u7ACB\u65E5\u671F 
+uniqueid=\u50C5\u4F7F\u7528\u8005 ID 
+gen.edit=\u7DE8\u8F2F 
+edit_channel_title=\u7DE8\u8F2F\u804A\u5929\u5BA4 
+bar.allmes=\u5168\u90E8\u8A0A\u606F 
+messages=\u8A0A\u606F 
+synoptic_options_title=\u6982\u8981\u9078\u9805 
+lay_user=\u804A\u5929\u5BA4\u4E2D\u7684\u4F7F\u7528\u8005 
+bar.datetime=\u65E5\u671F\u548C\u6642\u9593 
+desc_too_long=\u63CF\u8FF0\u5FC5\u9808\u5C11\u65BC {0} \u5B57\u5143 
+lay_restricted_note_days=\u53EA\u6709\u904E\u53BB{0}\u5929\u7684\u8A0A\u606F\u88AB\u5B58\u6A94\u4E26\u53EF\u88AB\u4EFB\u4F55\u7DB2\u7AD9\u5171\u7528\u8005\u8B80\u53D6\u3002 
+update_text=\u66F4\u65B0 
+message_owner=\u64C1\u6709\u4EBA 
+manage_tool=\u9078\u9805 
+showlast=\u986F\u793A\u6700\u8FD1\u7684 
+chatmesdel=\u522A\u9664\u804A\u5929\u8A0A\u606F\u4EBA\u662F 
+allMessages=\u5168\u90E8\u8A0A\u606F 
+custom.msgdisp=\u8A0A\u606F\u986F\u793A 
+bar.show=\u986F\u793A 
+channel_description=\u63CF\u8FF0 
+forchat=\u804A\u5929\u5BA4\u540D\u7A31 
+number_chars=\u6BCF\u5247\u8A0A\u606F\u7684\u5B57\u5143\u6578 
+showt=\u986F\u793A\u6642\u9593 
+set_as_default=\u8A2D\u5B9A"{0}"\u70BA\u9810\u8A2D\u503C 
+perm_description=\u70BA\u7DB2\u7AD9 \u201C{1}\u201D \u4E2D\u7684 {0} \u8A2D\u5B9A\u6B0A\u9650 
+showpast=\u904E\u53BB\u7684 
+viewingChatRoomText=\u73FE\u5728\u6B63\u5728\u6AA2\u8996\u7684\u8A0A\u606F\u662F"{0}" 
+youdonot4=\u60A8\u7121\u6B0A\u522A\u9664\u6B64\u804A\u5929\u8A0A\u606F 
+showtoday=\u986F\u793A\u4ECA\u5929\u7684\u8A0A\u606F 
+youdonot3=\u60A8\u7121\u6B0A\u767C\u4F48\u81F3\u6B64\u804A\u5929\u5BA4\u3002 
+youdonot2=\u60A8\u7121\u6B0A\u5EFA\u7ACB\u6B64\u804A\u5929\u5167\u5BB9 
+youdonot1=\u60A8\u7121\u6B0A\u6AA2\u8996\u6B64\u804A\u5929\u5BA4\u5167\u5BB9\u3002 
+timeAndDate=\u65E5\u671F\u548C\u6642\u9593 
+custom.showlast=\u986F\u793A\u524D 
+channel_enable_override_description=\u5141\u8A31\u7DB2\u7AD9\u53C3\u8207\u8005\u6539\u8B8A\u4ED6\u5011\u81EA\u5DF1\u7684\u804A\u5929\u986F\u793A\u65B9\u5F0F 
+setpermis=\u7D66\u5DE5\u4F5C\u7DB2\u7AD9\u7684\u804A\u5929\u5BA4\u8A2D\u5B9A\u6B0A\u9650 
+showd=\u986F\u793A\u65E5\u671F 
+channel_title_colon=\u6A19\u984C\uFF1A 
+delete.delete=\u522A\u9664\u804A\u5929\u8A0A\u606F\u4E2D 
+lay.user=\u804A\u5929\u5BA4\u4E2D\u7684\u4F7F\u7528\u8005 
+delete_room_confirm_title=\u522A\u9664\u804A\u5929\u5BA4\u4E2D 
+channel_title=\u6A19\u984C 
+bar.listnavselect=\u5217\u51FA\u9078\u9805\uFF1A\u6309[alt]+\u4E0A\u6216\u4E0B\u7BAD\u865F\u9375\u4F86\u6372\u52D5\u529F\u80FD\u8868 
+control.post=\u65B0\u589E\u8A0A\u606F 
+past_x_days=\u524D {0} \u5929 
+lay_restricted_note_messages=\u53EA\u6709\u904E\u53BB{0}\u5247\u7684\u8A0A\u606F\u88AB\u5B58\u6A94\u4E26\u53EF\u88AB\u4EFB\u4F55\u7DB2\u7AD9\u5171\u7528\u8005\u8B80\u53D6\u3002 
+timeOnly=\u50C5\u6642\u9593 
+view=\u6AA2\u8996 
+gen.delete=\u522A\u9664 
+gen.date=\u65E5\u671F\uFF1A 
+custom.showpast=\u986F\u793A\u904E\u53BB 
+validation_error=\u905E\u4EA4\u6B64\u8868\u683C\u51FA\u73FE\u932F\u8AA4\u3002\u8ACB\u53C3\u8003\u4EE5\u4E0B\u7279\u5B9A\u7684\u8A0A\u606F\u3002 
+showall=\u5168\u90E8\u8A0A\u606F 
+custom.days=\u5929\u7684\u8A0A\u606F 
+delete_room_confirm_alert=\u60A8\u662F\u5426\u78BA\u5B9A\u8981\u6C38\u4E45\u522A\u9664\u6B64\u804A\u5929\u5BA4\uFF1F 
+chatroom=\u804A\u5929\u5BA4\uFF1A 
+gen.save=\u66F4\u65B0\u9078\u9805 
+list.del=\u522A\u9664\u6B64\u8A0A\u606F 
+default_new_channel_title=\u4E3B\u804A\u5929\u5BA4 
+presence_panel=\u986F\u793A\u72C0\u614B 
+title_too_long=\u6A19\u984C\u5FC5\u9808\u5C11\u65BC {0} \u5B57\u5143 
+gen.cancel=\u53D6\u6D88 
+neg_num_error=\u4E0D\u5141\u8A31\u8CA0\u6578\u503C 
+custom.mess=\u5247\u8A0A\u606F 
+dateOnly=\u50C5\u65E5\u671F 
+perm_error=\u5C0D{0}\u6B0A\u9650\u4E0D\u8DB3 
+enter_the_chat_room=\u9032\u5165''{0}''\u804A\u5929\u5BA4 
+set_default=\u8A2D\u5B9A\u70BA\u9810\u8A2D\u503C 
+therewaspro=\u524D\u4E00\u8A0A\u606F\u50B3\u9001\u6709\u554F\u984C\u3002 
+gen.mess=\u8A0A\u606F\uFF1A 
+turnon=\u958B\u555F\u65B0\u8A0A\u606F\u901A\u77E5 
+custom.chatroom=\u804A\u5929\u5BA4 
