--- a/chat-tool/tool/src/bundle/chat_es.properties
+++ b/chat-tool/tool/src/bundle/chat_es.properties
@@ -123,3 +123,5 @@ therewaspro=Hubo un problema en el env\u00EDo del mensaje anterior.
 turnon=ACTIVE la alerta de nuevo mensaje
 gen.mess=Mensaje\:
 custom.chatroom=Sala de Chat
+
+messages_shown_total=Mostrando {0} mensajes de {1}
