SAK-19280, Turkish Translation
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@104263 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_tr_TR.properties
+++ b/chat-tool/tool/src/bundle/chat_tr_TR.properties
@@ -77,13 +77,14 @@ manage_tool=Seçenekler
 message_display=Görüntülenen Mesajlar
 message_owner=Sahibi
 messages=Mesajlar
+messages_shown_total={1} mesajdan {0} tanesi görüntüleniyor
 monitor_panel=Liste
 neg_num_error=Negatif say\u0131lara izin verilmez
 neitherDateOrTime=Ne Tarih ne de Zaman
 number_chars=Sohbet mesaj\u0131 ba\u015f\u0131na karakter say\u0131s\u0131
 number_days=Geçmi\u015fteki gün say\u0131s\u0131
 number_messages=Sohbet mesajlar\u0131n\u0131n say\u0131s\u0131
-on=on
+on=-
 past_x_days=Son {0} gün
 past_x_messages=Son {0} mesaj
 perm_description={0} için ''{1}'' çal\u0131\u015fma alan\u0131ndaki izinleri belirle
@@ -115,7 +116,7 @@ title_too_long=Ba\u015fl\u0131k {0} karakterden az olmal\u0131
 tool_options_title=Araç Tercihleri
 turnoff=Yeni Mesaj Uyar\u0131s\u0131n\u0131 KAPAT
 turnon=Yeni Mesaj Uyar\u0131s\u0131n\u0131 AÇ
-uniqueid=Sadece ID
+uniqueid=Sadece Kodu
 update_text=Düzenle
 validation_error=Bu formun gönderiminde bir hata var.   A\u015fa\u011f\u0131daki mesajara bak\u0131n.
 view=Görüntüle
