SAK-22627 100% fr_FR translation of Chat's chat-impl
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@113457 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-impl/impl/src/bundle/chat-message_fr_FR.properties
+++ b/chat-impl/impl/src/bundle/chat-message_fr_FR.properties
@@ -1,4 +1,4 @@
-# Copyright (C) 2009-2012 The Sakai Foundation
+# Copyright (C) 2012 The Sakai Foundation
 #
 # Licensed under the Educational Community License, Version 2.0 (the "License"); 
 # you may not use this file except in compliance with the License. 
@@ -23,7 +23,4 @@
 # Universit\u00E9 du Littoral C\u00F4te d'Opale
 # Universit\u00E9 Pierre et Marie Curie
 
-chat_from=De
-chat_body=Corps du message\n
-chat_message=Message
-chat_header=Ent\u00eates du message\n
+chat-message= Un message de chat correspond \u00e0 un message dans un salon.
