SAK-25743 - Update eu translation.
git-svn-id: https://source.sakaiproject.org/svn/chat/trunk@306129 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/chat-tool/tool/src/bundle/chat_eu.properties
+++ b/chat-tool/tool/src/bundle/chat_eu.properties
@@ -1,113 +1,117 @@
-#
-# Copyright (c) 2008 Sakai Foundation
-#
-# Licensed under the Educational Community License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-# http://www.osedu.org/licenses/ECL-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-# 
-
+#X-Generator: crowdin.net
 
 #Java code
 
-thischat = Txat hau ez dago erabilgarri.
-chatmesdel = Txateko mezua ezabatu duena hau da:
-chatroom = Txat-gela:
-days = Egunak
-forchat = Txat-gelaren izenaren arabera. Txat-gelaren izena
-hided = Ezkutatu eguna
-hidet = Ezkutatu ordua
-messages = Mezuak
-on = on
-permis = Baimenak
-setpermis = Ezarri baimenak guneko txat-gelan 
-perm_description= Ezarri baimenak Txaterako ''{1}'' gunean.
-showall = Mezu guztiak
-shownone = Ez erakutsi mezuen historikoa
-showd = Erakutsi eguna
-showlast = Erakutsi azkena(k)
-showpast = Aurrekoa(k)
-showt = Erakutsi ordua
-showtoday = Erakutsi gaurko mezuak
-thereispro = Ezin dira mezuak ezarri beste erabiltzaile bat gunea editatzen ari delako. Itxi baimenak beste tresnetan jarraitu baino lehen.
-therewaspro = Arazo bat izan da aurreko mezua bidaltzean.
-turnoff = Desgaitu mezu berriaren alerta
-turnon = Gaitu mezu berriaren alerta
-youdonot1 = Ez duzu baimenik txat hau ikusteko.
-youdonot2 = Ez duzu baimenik txat hau sortzeko.
-youdonot3 = Ez duzu baimenik txat honetara mezuak bidaltzeko.
-youdonot4 = Ez duzu baimenik txat honetako mezuak ezabatzeko.
-youent = Sartu zara+sartu duzu
+thischat=Txat hau ez dago erabilgarri.
+chatmesdel=Txateko mezua ezabatu duena hau da\:
+chatroom=Txat-gela\:
+days=Egunak
+forchat=Txat-gelaren izenaren arabera. Txat-gelaren izena
+hided=Ezkutatu eguna
+hidet=Ezkutatu ordua
+messages=Mezuak
+on=on
+permis=Baimenak
+setpermis=Ezarri baimenak guneko txat-gelan 
+perm_description=Ezarri baimenak Txaterako ''{1}'' gunean.
+showall=Mezu guztiak
+shownone=Ez erakutsi mezuen historikoa
+showd=Erakutsi eguna
+showlast=Erakutsi azkena(k)
+showpast=Aurrekoa(k)
+showt=Erakutsi ordua
+showtoday=Erakutsi gaurko mezuak
+thereispro=Ezin dira mezuak ezarri beste erabiltzaile bat gunea editatzen ari delako. Itxi baimenak beste tresnetan jarraitu baino lehen.
+therewaspro=Arazo bat izan da aurreko mezua bidaltzean.
+turnoff=Desgaitu mezu berriaren alerta
+turnon=Gaitu mezu berriaren alerta
+youdonot1=Ez duzu baimenik txat hau ikusteko.
+youdonot2=Ez duzu baimenik txat hau sortzeko.
+youdonot3=Ez duzu baimenik txat honetara mezuak bidaltzeko.
+youdonot4=Ez duzu baimenik txat honetako mezuak ezabatzeko.
+youent=Sartu zara+sartu duzu
 
 
 #General Vm
 
-gen.alert = Alerta:
-gen.cancel = Utzi
-gen.date = Eguna:
-gen.delete = Ezabatu
-gen.edit = Editatu
-gen.from = Bidaltzailea:
-gen.mess = Mezua:
-gen.save = Eguneratu aukerak
+gen.alert=Alerta\:
+gen.cancel=Utzi
+gen.date=Eguna\:
+gen.delete=Ezabatu
+gen.edit=Editatu
+gen.from=Bidaltzailea\:
+gen.mess=Mezua\:
+gen.save=Eguneratu aukerak
 
 
 #Control Vm
 
-control.clear = Garbitu
-control.post = Gehitu mezua
+control.clear=Garbitu
+control.post=Gehitu mezua
+control.lab=Gehitu mezua
+combox.viewfrom=Ikusi mezuak noiztik...
 
 
 #Customize Vm
 
-custom.chatroom = Txat-gela
-custom.cuschat = Txataren aukerak
-custom.days = egunak
-custom.howmany = Zenbat mezu bistaratuko dira?
-custom.mess = mezuak
-custom.showall = Erakutsi mezu guztiak
-custom.showlast = Erakutsi azkenak
-custom.showpast = Erakutsi azken egun hauetako mezuak:
-custom.use1 = Erabili guneko txat-gela nagusia
-custom.use2 = Erabili txat-gela hau:
-custom.use3 = Erabili txat-gela berri bat
-custom.which  = Zein txat-gela bistaratzea nahi duzu?
-custom.called = izen hau duena:
-custom.msgdisp = Bistaratu mezua
+custom.chatroom=Txat-gela
+custom.cuschat=Txataren aukerak
+custom.days=egunak
+custom.howmany=Zenbat mezu bistaratuko dira?
+custom.mess=mezuak
+custom.showall=Erakutsi mezu guztiak
+custom.showlast=Erakutsi azkenak
+custom.showpast=Erakutsi azken egun hauetako mezuak\:
+custom.use1=Erabili guneko txat-gela nagusia
+custom.use2=Erabili txat-gela hau\:
+custom.use3=Erabili txat-gela berri bat
+custom.which=Zein txat-gela bistaratzea nahi duzu?
+custom.called=izen hau duena\:
+custom.msgdisp=Bistaratu mezua
+## added for dates limiting (https://jira.sakaiproject.org/browse/SAK-24207)
+custom_date_display=Posting allowed from {0} through {1}
+custom_date_display_start=Posting allowed starting {0}
+custom_date_display_end=Posting allowed through {1}
+custom_date_heading=Allowed Posting Dates
+custom_date_instructions=Users are allowed to post to the chatroom between the dates specified below. \nLeaving or setting a date blank indicates no date restriction (only the permissions would limit posting). \nThe end date must be the same as or later than the start date.
+custom_date_start=Start
+custom_date_end=End
+custom_date_restricted=Posting is currently disabled by configured dates.
+custom_date_error_order=Start date ({0}) must come before end date ({1})
+# for the date picker
+custom_date_entry_format_description=(mm/dd/yy)
+custom_date_entry_today_is=Today is
+custom_date_entry_week_header=Wk
+custom_date_entry_format=MM/dd/yy
+custom_date_entry_goto=Go To Current Month
 
 
 #Delete Vm
 
-delete.delete = Ezabatzen ari da berriketako mezua
-delete.sure = Ziur zaude betiko ezabatu nahi duzula mezu hau?
+delete.delete=Ezabatzen ari da berriketako mezua
+delete.sure=Ziur zaude betiko ezabatu nahi duzula mezu hau?
+delete.wrong=Message has been deleted already\!
 
 
 #Layaut Vm
 
-lay.note = Berriketako mezu guztiak artxibatu egiten dira eta parte-hartzaile bakoitzaren gunetik irakur daitezke.
-lay.user = Erabiltzaileak berriketan
+lay.note=Berriketako mezu guztiak artxibatu egiten dira eta parte-hartzaile bakoitzaren gunetik irakur daitezke.
+lay.user=Erabiltzaileak berriketan
 
 
 #List Vm
 
-list.del = Ezabatu mezu hau
+list.del=Ezabatu mezu hau
 
 #Toolbar Vm (also used in Java)
-bar.onlytime = Ordua bakarrik
-bar.datetime = Eguna eta ordua
-bar.onlydate = Eguna bakarrik
-bar.nodatetime = Ez eguna, ez ordua ere
-bar.allmes = Mezu guztiak
+bar.onlytime=Ordua bakarrik
+bar.datetime=Eguna eta ordua
+bar.onlydate=Eguna bakarrik
+bar.nodatetime=Ez eguna, ez ordua ere
+bar.allmes=Mezu guztiak
 bar.view=Bistaratu
 bar.show=Erakutsi
-bar.listnavselect = Aukeren zerrenda: sakatu Alt eta gorako edo beherako geziak menuan korritzeko.
+bar.listnavselect=Aukeren zerrenda\: sakatu Alt eta gorako edo beherako geziak menuan korritzeko.
 
 
 
@@ -119,8 +123,8 @@ bar.listnavselect = Aukeren zerrenda: sakatu Alt eta gorako edo beherako geziak 
 # ###############################
 # all the new strings
 
-past_x_days= Azken {0} egunak
-past_x_messages= Azken {0} mezuak
+past_x_days=Azken {0} egunak
+past_x_messages=Azken {0} mezuak
 
 default_new_channel_title=Kanal nagusia
 allMessages=Mezu guztiak
@@ -128,10 +132,11 @@ timeOnly=Ordua bakarrik
 timeAndDate=Eguna eta ordua ere
 dateOnly=Eguna bakarrik
 neitherDateOrTime=Ez eguna, ez ordua
+uniqueid=ID bakarrik
 manage_tool=Kudeaketa tresna
 lay_note=Berriketa mezu guztiak artxibatuko dira eta guneko edozein kidek irakurri ahal izango ditu
 lay_restricted_note_days=Bakarrik azken {0} egunetako mezuak artxibatuko dira guneko edozein kidek kontsulta ditzan.
-lay_restricted_note_messages= Bakarrik azken {0} mezuak artxibatuko dira guneko edozein kidek kontsulta ditzan.
+lay_restricted_note_messages=Bakarrik azken {0} mezuak artxibatuko dira guneko edozein kidek kontsulta ditzan.
 lay_restricted_note_none=Bakarrik uneko saioko mezuak irakur ditzakete guneko kideek.
 lay_user=Erabiltzaileak solasgunean
 view=Bistaratu
@@ -141,14 +146,18 @@ change_room=Aldatu gela
 enter_the_chat_room=Sartu ''{0}'' gelan 
 channel_creation_date=Sortze-data
 channel_description=Azalpena
+channel_description_colon=Description\:
 channel_title=Titulua
+channel_title_colon=Title\:
 
 edit_channel_title=Editatu gela
 add_channel_title=Erantsi gela
 
 message_display=Mezua erakusteko
 
-perm_error=Ez dago nahikoa baimen honetarako: {0}
+messages_shown_total=Showing {0} messages out of {1}
+
+perm_error=Ez dago nahikoa baimen honetarako\: {0}
 
 message_owner=Jabea
 
@@ -162,11 +171,14 @@ monitor_panel=Zerrenda
 presence_panel=Presentzia
 control_panel=Kontrola
 
-delete_room_confirm_title = Txat-gela bat ezabatzen ari da
-delete_room_confirm_alert = Ziur zaude betiko ezabatu nahi duzula Txat-gela hau?
+delete_room_confirm_title=Txat-gela bat ezabatzen ari da
+delete_room_confirm_alert=Ziur zaude betiko ezabatu nahi duzula Txat-gela hau?
+
+delete_room_messages_confirm_title=Deleting all messages from chat room
+delete_room_messages_confirm_alert=Are you sure you want to permanently delete all messages from this chat room?
 
 #Synoptic pages
-recent_chat_heading= Azken mezuak
+recent_chat_heading=Azken mezuak
 number_days=Igarotako egun-kopurua
 number_messages=Txat-mezuen kopurua
 number_chars=Txat-mezuaren karaktere-kopurua
@@ -182,14 +194,11 @@ delete_room_messages=Garbitu Historia
 set_default=Ezarri lehenetsi gisa
 set_as_default=Ezarri ''{0}'' lehenetsi gisa
 
-viewingChatRoomText=Orain, mezuak bistaratzen ari dira gela honetarako: ''{0}''
+viewingChatRoomText=Orain, mezuak bistaratzen ari dira gela honetarako\: ''{0}''
 
 back_to_room=itzuli gelara
 
 channel_enable_override_description=Baimena eman gunearen erabiltzaileei beren Txat-leihoaren itxura aldatzeko
+
 neg_num_error=Ez dira onartzen zenbaki negatiboak
 
-combox.viewfrom= Ikusi mezuak noiztik...
-uniqueid=ID bakarrik
-
-control.lab=Gehitu mezua
