--- a/chat-tool/tool/src/bundle/permissions_eu.properties
+++ b/chat-tool/tool/src/bundle/permissions_eu.properties
@@ -1,7 +1,8 @@
-desc-chat.new.channel=Sortu gela berriak
+#X-Generator: crowdin.net
 desc-chat.new=Publikatu mezuak
-desc-chat.delete.own=Ezabatu norberaren mezuak
 desc-chat.read=Irakurri mezuak
-desc-chat.delete.channel=Eabatu gelak
 desc-chat.delete.any=Ezabatu edozein mezu
+desc-chat.delete.own=Ezabatu norberaren mezuak
+desc-chat.delete.channel=Eabatu gelak
+desc-chat.new.channel=Sortu gela berriak
 desc-chat.revise.channel=Ezarri geletako ezarpenak
