--- a/chat-impl/impl/src/bundle/chat-channel_eu.properties
+++ b/chat-impl/impl/src/bundle/chat-channel_eu.properties
@@ -1,3 +1,3 @@
-chat-channel = Txat kanal batek txat-areto bat irudikatzen du, gune baten barruan. 
-
+#X-Generator: crowdin.net
+chat-channel=Txat kanal batek txat-areto bat irudikatzen du, gune baten barruan. 
 
