--- a/chat-impl/impl/src/bundle/chat-message_eu.properties
+++ b/chat-impl/impl/src/bundle/chat-message_eu.properties
@@ -1,1 +1,3 @@
-chat-message = Txat-mezu batek kanal bateko mezua da (gela batekoa). 
+#X-Generator: crowdin.net
+chat-message=Txat-mezu batek kanal bateko mezua da (gela batekoa). 
+
